--- a/product/移动与通信/云开发低代码平台/微搭应用市场/模板使用说明/宠物店小程序模板.md
+++ b/product/移动与通信/云开发低代码平台/微搭应用市场/模板使用说明/宠物店小程序模板.md
@@ -1,106 +1,85 @@
-### **第一步：购买和试用小程序**
+### 步骤1：购买和试用小程序
 
-[微搭应用市场](https://weda.cloud.tencent.com/)选购小程序，点击【试用7天】或【立即购买】下单，下单后跳到模版管理安装模版。
+进入 [微搭应用市场](https://weda.cloud.tencent.com/) 选购宠物店小程序，单击**试用7天**或**立即购买**下单。
+![](https://main.qcloudimg.com/raw/cc9d2a771abc6c41e9761c7d824cbc52.jpg)  
 
-​                 ![img](https://main.qcloudimg.com/raw/6058a0a3cbdea59705c95821d34f3777.jpg)        
+### 步骤2：安装模版
 
-### **第二步：安装模版**
+1. 进入**模板管理** > **我的模板**页面，在模版列表单击**安装**，并填写自定义名称，单击**确认**，生成可拖拽的店铺应用。
+![](https://main.qcloudimg.com/raw/92e5cb8a112e5ae1e241e5dd5d4d0818.png) 
+2. 进入**应用管理**页面，单击相应应用模板，进入应用详情页。
+![](https://main.qcloudimg.com/raw/5ec527632d96c1dcd07511724cb6d9b5.png)    
+3. 单击**进入应用页面编辑**进行 [步骤3](#step3) 店铺装修。完成 [步骤4](#step4) 后单击**外部数据管理**进入后台管理端，后台数据管理请参见 [步骤5](#step5)。
+![](https://main.qcloudimg.com/raw/9de03d53fe6c85f65c38f383ef429ec8.png)
+        
 
-在模版列表点击安装，并填写自定义名称，生成可拖拽的店铺应用。
 
-​                 ![img](https://main.qcloudimg.com/raw/1d5497aa65347fec9b3e38d7c6932ce9.png)        
+### 步骤3：小程序店铺装修[](id:step3)
 
-模版安装的应用通过【应用管理】，进入应用详情页
+您在装修过程中遇到任何问题，欢迎咨询模版提供客服。更多应用编辑器的具体说明，请参见 [应用编辑器概述](https://cloud.tencent.com/document/product/1301/53204)。
 
-​                 ![img](https://main.qcloudimg.com/raw/cbaeab30bbf716502eed2ac355022b57.png)        
+#### 运营首页轮播图装修
+打开左侧大纲树选择对应轮播图的**图片**，进入右侧的**组件编辑** > **数据**页面中，可通过修改**图片**链接进行轮播图的替换。
+![img](https://main.qcloudimg.com/raw/715d71cb4df44c7190478b8f80d3f192.png)        
 
-### **第三步： 小程序店铺装修**
+#### 定制新增页面
+单击**创建新页面**进行定制新页面。
+![img](https://main.qcloudimg.com/raw/e048a9209f31c27f618898bf13207cad.png)        
 
-您在装修过程中遇到任何问题，欢迎咨询模版提供客服。
+#### 设置页面跳转
+打开左侧大纲树选择对应的**Tab 栏**导航组件，进入右侧的**组件编辑** > **事件**页面中，可通过选择**触发条件**或修改**已添加动作**进行页面跳转的设置。
+![img](https://main.qcloudimg.com/raw/5973676e33ca5991c733ac7b605118b0.png)        
 
-装修编辑器整体介绍：
-
-​                 ![img](https://main.qcloudimg.com/raw/93d4b6e0b7b554c1fcf4fbc71399e537.png)        
-
-​                 ![img](https://main.qcloudimg.com/raw/41973bbf3bf685a56a461cb26bc1c852.png)        
-
-- 【页面管理】支持切换页面，对所有页面进行个性化装修
-- 【编辑区】点击选中要编辑的组件
-- 【预览区】可查看页面效果
-- 【组建编辑】可按需修改您的个性化内容，包含数据（静态文本、图片）、样式、事件
-- 【组件】模版所带组件库，可用于新页面开发
-
-#### **1.  运营首页轮播图装修**
-
-​                 ![img](https://main.qcloudimg.com/raw/715d71cb4df44c7190478b8f80d3f192.png)        
-
-#### **2.  定制新增页面**
-
-​                 ![img](https://main.qcloudimg.com/raw/e048a9209f31c27f618898bf13207cad.png)        
-
-#### **3.  设置页面跳转**
-
-​                 ![img](https://main.qcloudimg.com/raw/5973676e33ca5991c733ac7b605118b0.png)        
-
-#### **4.  定制事件响应**
+#### 定制事件响应
 
 如您需要更多操作帮助，请联系您的专属顾问。
 
-### **第四步：** **创建模型应用**
+### 步骤4：创建模型应用[](id:step4)
+1. 进入**应用管理**页面，单击**创建空白应用**，选择**模型应用**并单击**下一步**。
+![](https://main.qcloudimg.com/raw/aede1dc19ac960c96ece3be805cbd71e.png)     
+2. 在**应用管理**页面中，单击上一步新建的空白应用，在其**应用详情**页面下单击**进入应用页面编辑**进入编辑器页面。
+![](https://main.qcloudimg.com/raw/cf92702b3f165024e9eac05c12501071.png)
+3. 单击头部导航栏**发布**，跟根据实际情况选择发布方式并单击**下一步**。
+![img](https://main.qcloudimg.com/raw/1346bcee3b060d03245bfcd97baed57f.png)        
+4. 单击**访问链接**进入发布后的应用页面。
+![](https://main.qcloudimg.com/raw/b07d2942c8224ef7da20b5b054e4c999.png)        
 
-​                 ![img](https://main.qcloudimg.com/raw/59a275df6156e960b591a4009197a9a8.png)        
 
-​                 ![img](https://main.qcloudimg.com/raw/93d3875c92d3885b51d5173a25166854.png)        
-
-​                 ![img](https://main.qcloudimg.com/raw/36443114a9ddee046f11d0a8fb6812f5.png)        
-
-​                 ![img](https://main.qcloudimg.com/raw/7da4884feea5acf9ffbf35bb464d10e9.png)        
-
-
-
-### **第五步：数据管理**
+### 步骤5：数据管理[](id:step5)
 
 在发布后的企业管理后台中，打开对应的列表页面，进行数据管理。
 
-1. 查看预约
+#### 查看预约
 
 用户在小程序端提交预约后，在后台数据管理页面中，找到对应的页面，查看预约内容。
+![](https://main.qcloudimg.com/raw/f0d4da2760561fbe333cb577bf0f7915.png)      
 
-​                 ![img](https://main.qcloudimg.com/raw/4a06318543d6c8117f644c7ab09dcada.png)        
-
-1. 宠物资讯
-
-​                 ![img](https://main.qcloudimg.com/raw/d482ac9554082e13249cecdf24e9ab54.png)        
-
+#### 宠物资讯
+<img src = "https://main.qcloudimg.com/raw/d482ac9554082e13249cecdf24e9ab54.png" style="width: 60%">
+  
 如果要修宠物资讯的内容，在后台数据管理页面中，找到对应的页面，修改信息。
+![](https://main.qcloudimg.com/raw/734727075cfe6130b2a0b3db4023504e.png)    
 
-​                 ![img](https://main.qcloudimg.com/raw/53633b47694653d9cbdf5282c10540e1.png)        
-
-1. 宠物领养
-
-​                 ![img](https://main.qcloudimg.com/raw/5324e7d029bb2a81a563f4d9cfb46d0e.png)        
-
+#### 宠物领养
+<img src = "https://main.qcloudimg.com/raw/5324e7d029bb2a81a563f4d9cfb46d0e.png" style="width: 60%">
+     
 如果要修宠物领养的内容，在后台数据管理页面中，找到对应的页面，修改信息。
+![](https://main.qcloudimg.com/raw/570b63cbbd43780e9134f8d20ba985da.png)  
 
-​                 ![img](https://main.qcloudimg.com/raw/b387a84d01311539fd1ae895e870c4f5.png)        
-
-1. 联系方式
-
-​                 ![img](https://main.qcloudimg.com/raw/ac61a909f6a17f293921890f7b5fb1ef.png)        
+#### 联系方式
+<img src = "https://main.qcloudimg.com/raw/0a81b8b231ab1c34b33bd39467aaa750.png" style="width: 60%">   
 
 如果要修改页面上的联系方式，请到后台数据管理页面，找到对应的页面，修改里面的内容。
+![](https://main.qcloudimg.com/raw/ba62acb8eab5f2d13c4ed81ef3055350.png)    
 
-​                 ![img](https://main.qcloudimg.com/raw/3b360fbfbf44460a9a561ffa0a114ace.png)        
+#### 宠物其他服务
+<img src = "https://main.qcloudimg.com/raw/9367b6f2d12c965cd2897c78ec6b9909.png" style="width: 60%">    
 
-1. 宠物其他服务
+如果要修改宠物其他服务的内容，在后台数据管理页面中，找到对应的页面，修改信息。
+![](https://main.qcloudimg.com/raw/ed42a896850c8486be7c5a247ccec4fa.png)      
 
-​                 ![img](https://main.qcloudimg.com/raw/042abf080da80a63830b5cb9fb7b3b97.png)      
 
-  如果要修改宠物其他服务的内容，在后台数据管理页面中，找到对应的页面，修改信息。
+### 步骤6：3分钟完成小程序预览或发布
 
-​                 ![img](https://main.qcloudimg.com/raw/c0d044363e2765ebfd090e6d9bff06ff.png)        
-
-### **第六步： 3分钟完成小程序预览/发布**
-
-请移步 [小程序发布文档](https://cloud.tencent.com/document/product/1301/55140)
+详情请参见 [小程序发布](https://cloud.tencent.com/document/product/1301/55140)。
 
