--- a/product/移动与通信/云开发低代码平台/微搭应用市场/模板使用说明/律师事务所小程序模板.md
+++ b/product/移动与通信/云开发低代码平台/微搭应用市场/模板使用说明/律师事务所小程序模板.md
@@ -1,106 +1,85 @@
-### **第一步：购买和试用小程序**
+### 步骤1：购买和试用小程序
 
-[微搭应用市场](https://weda.cloud.tencent.com/)选购小程序，点击【试用7天】或【立即购买】下单，下单后跳到模版管理安装模版。
+进入 [微搭应用市场](https://weda.cloud.tencent.com/) 选购律师事务所小程序，单击**试用7天**或**立即购买**下单。
+![](https://main.qcloudimg.com/raw/d541c301cb4f3d1e19b32c4025fdc48f.jpg)     
 
-​                 ![img](https://main.qcloudimg.com/raw/34fa0c6fc61a80395bf7e2b50258c855.jpg)        
+### 步骤2：安装模版
 
-### **第二步：安装模版**
+1. 进入**模板管理** > **我的模板**页面，在模版列表单击**安装**，并填写自定义名称，单击**确认**，生成可拖拽的店铺应用。
+![](https://main.qcloudimg.com/raw/92e5cb8a112e5ae1e241e5dd5d4d0818.png) 
+2. 进入**应用管理**页面，单击相应应用模板，进入应用详情页。
+![](https://main.qcloudimg.com/raw/5ec527632d96c1dcd07511724cb6d9b5.png)    
+3. 单击**进入应用页面编辑**进行 [步骤3](#step3) 店铺装修。完成 [步骤4](#step4) 后单击**外部数据管理**进入后台管理端，后台数据管理请参见 [步骤5](#step5)。
+![](https://main.qcloudimg.com/raw/9de03d53fe6c85f65c38f383ef429ec8.png)
 
-在模版列表点击安装，并填写自定义名称，生成可拖拽的店铺应用。
+### 步骤3：小程序店铺装修[](id:step3)
 
-​                 ![img](https://main.qcloudimg.com/raw/1923a1393cdadc6bf0e6ecb9d15eb725.png)        
+您在装修过程中遇到任何问题，欢迎咨询模版提供客服。更多应用编辑器的具体说明，请参见 [应用编辑器概述](https://cloud.tencent.com/document/product/1301/53204)。
 
-模版安装的应用通过【应用管理】，进入应用详情页
+#### 首页轮播图装修
+打开左侧大纲树选择对应轮播图的**图片**，进入右侧的**组件编辑** > **数据**页面中，可通过修改**图片**链接进行轮播图的替换。
+![img](https://main.qcloudimg.com/raw/a977a3dd49e28a22f5d4fdf170646cc2.png)        
 
-​                 ![img](https://main.qcloudimg.com/raw/3751241c6525747a2ed5396e70062a87.png)        
+#### 定制新增页面
+单击**创建新页面**进行定制新页面。
+![img](https://main.qcloudimg.com/raw/e965155853efcb9adc104e1d2f080ef3.png)        
 
-### **第三步： 小程序店铺装修**
+#### 设置页面跳转
+打开左侧大纲树选择对应的**Tab 栏**导航组件，进入右侧的**组件编辑** > **事件**页面中，可通过选择**触发条件**或修改**已添加动作**进行页面跳转的设置。
+![img](https://main.qcloudimg.com/raw/7ef082072da23aaf4a445d3809fb1825.png)        
 
-您在装修过程中遇到任何问题，欢迎咨询模版提供客服。
-
-装修编辑器整体介绍：                ![img](https://main.qcloudimg.com/raw/b1aa0548912c54fba7bfe11d9097976d.png)        
-
-​                 ![img](https://main.qcloudimg.com/raw/b3b029eeff94f01ca24b63d54c2bbae7.png)        
-
-- 【页面管理】支持切换页面，对所有页面进行个性化装修
-- 【编辑区】点击选中要编辑的组件
-- 【预览区】可查看页面效果
-- 【组建编辑】可按需修改您的个性化内容，包含数据（静态文本、图片）、样式、事件
-- 【组件】模版所带组件库，可用于新页面开发
-
-#### **1.  首页轮播图装修**
-
-​                 ![img](https://main.qcloudimg.com/raw/a977a3dd49e28a22f5d4fdf170646cc2.png)        
-
-#### **2.  定制新增页面**
-
-​                 ![img](https://main.qcloudimg.com/raw/e965155853efcb9adc104e1d2f080ef3.png)        
-
-#### **3.  设置页面跳转**
-
-​                 ![img](https://main.qcloudimg.com/raw/7ef082072da23aaf4a445d3809fb1825.png)        
-
-#### **4.  定制事件响应**
+#### 定制事件响应
 
 如您需要更多操作帮助，请联系您的专属顾问。
 
-### **第四步：** **创建模型应用**
+### 步骤4：创建模型应用[](id:step4)
+1. 进入**应用管理**页面，单击**创建空白应用**，选择**模型应用**并单击**下一步**。
+![](https://main.qcloudimg.com/raw/aede1dc19ac960c96ece3be805cbd71e.png)     
+2. 在**应用管理**页面中，单击上一步新建的空白应用，在其**应用详情**页面下单击**进入应用页面编辑**进入编辑器页面。
+![](https://main.qcloudimg.com/raw/cf92702b3f165024e9eac05c12501071.png)
+3. 单击头部导航栏**发布**，跟根据实际情况选择发布方式并单击**下一步**。
+![img](https://main.qcloudimg.com/raw/1346bcee3b060d03245bfcd97baed57f.png)        
+4. 单击**访问链接**进入发布后的应用页面。
+![](https://main.qcloudimg.com/raw/b07d2942c8224ef7da20b5b054e4c999.png)         
 
-​                 ![img](https://main.qcloudimg.com/raw/a4e07da90e5a2d0aed37230e375d86cb.png)        
 
-​                 ![img](https://main.qcloudimg.com/raw/6a586aa7066c2fe52ddd3da3791405c3.png)        
-
-​                 ![img](https://main.qcloudimg.com/raw/97ab67fee8ebdc0e3b59369e581d99fe.png)        
-
-​                 ![img](https://main.qcloudimg.com/raw/b2c698a976cea1a24b6f285ed1dbb39e.png)        
-
-
-
-### **第五步：**数据管理
+### 步骤5：数据管理[](id:step5)
 
 在发布后的企业管理后台中，打开对应的列表页面，进行数据管理。
 
-1. 法律服务列表
-
-​                 ![img](https://main.qcloudimg.com/raw/cfae8684360e078e8c04d284e0266b73.png)        
-
+#### 法律服务列表
+<img src = "https://main.qcloudimg.com/raw/cfae8684360e078e8c04d284e0266b73.png" style="width: 60%">
+    
 如果要修改法律服务列表，请到后台数据管理页面，找到对应的页面，修改里面的内容。
+![](https://main.qcloudimg.com/raw/bc8b505cb41d6f8a410a3770ba864953.png)   
 
-​                 ![img](https://main.qcloudimg.com/raw/b7cc91125461b94e12142b7aaf3313ab.png)        
-
-1. 在线咨询
-
-​                 ![img](https://main.qcloudimg.com/raw/b2ae27db73ca3267f5389bafa26a877a.png)        
+#### 在线咨询
+<img src = "https://main.qcloudimg.com/raw/b2ae27db73ca3267f5389bafa26a877a.png" style="width: 60%">    
 
 用户在小程序端提交在线咨询后，在后台数据管理页面中，找到对应的页面，查看留言内容。
+![](https://main.qcloudimg.com/raw/6c331db60d5a307c0cb0a5ac892978e4.png)  
 
-​                 ![img](https://main.qcloudimg.com/raw/f1f515e60d23893422c6bfda61f14bf6.png)        
-
-1. 成功案例
-
-​                 ![img](https://main.qcloudimg.com/raw/d1239b1259bc1160e8ea00b6533692dd.png)        
+#### 成功案例
+<img src = "https://main.qcloudimg.com/raw/d1239b1259bc1160e8ea00b6533692dd.png" style="width: 60%">       
 
 如果要修改成功案例的内容，在后台数据管理页面中，找到对应的页面，修改产品信息。
+![](https://main.qcloudimg.com/raw/609064abc6ceeb0d49aa45ba18086226.png)     
 
-​                 ![img](https://main.qcloudimg.com/raw/d0d275e39779e5d2de8bdee3849bc727.png)        
-
-1. 新闻列表
-
-​                 ![img](https://main.qcloudimg.com/raw/f91bc66b8287bff5d26bf1fb5c2a2d7b.png)        
+#### 新闻列表
+<img src = "https://main.qcloudimg.com/raw/f91bc66b8287bff5d26bf1fb5c2a2d7b.png" style="width: 60%">          
 
 如果要修改新闻列表的内容，在后台数据管理页面中，找到对应的页面，修改信息
+![](https://main.qcloudimg.com/raw/06253f1308ff599a13627fa4f7e267ce.png)     
 
-​                 ![img](https://main.qcloudimg.com/raw/fd3d446ac4b3c92d8c012e4373e96ca5.png)        
+#### 律师列表
+<img src = "https://main.qcloudimg.com/raw/3a01110cd1b10057740789a576f355a0.png" style="width: 60%">          
 
-5、律师列表
+如果要修改律师列表的内容，在后台数据管理页面中，找到对应的页面，修改信息。
+![](https://main.qcloudimg.com/raw/3661cf78bb781b76b59468056b0af82e.png)      
 
-​                 ![img](https://main.qcloudimg.com/raw/041dc7e61cf7a464cc972793827cd1ef.png)    
 
-​    如果要修改律师列表的内容，在后台数据管理页面中，找到对应的页面，修改信息。
 
-​                 ![img](https://main.qcloudimg.com/raw/a9129ebe0fa9e4fe115a430a0b15c1bb.png)        
+### 步骤6：3分钟完成小程序预览或发布
 
-### **第六步： 3分钟完成小程序预览/发布**
-
-请移步 [小程序发布文档](https://cloud.tencent.com/document/product/1301/55140)
+详情请参见 [小程序发布](https://cloud.tencent.com/document/product/1301/55140)。
 
