--- a/product/移动与通信/云开发低代码平台/微搭应用市场/模板使用说明/微搭企业门户小程序模板.md
+++ b/product/移动与通信/云开发低代码平台/微搭应用市场/模板使用说明/微搭企业门户小程序模板.md
@@ -58,11 +58,13 @@
 ### 步骤2：安装模版
 
 1. 进入**模板管理** > **我的模板**页面，在模版列表单击**安装**，并填写自定义名称，单击**确认**，生成可拖拽的店铺应用。
-![](https://main.qcloudimg.com/raw/bff38fd2780f3853814a09577c180b19.png)   
+![](https://main.qcloudimg.com/raw/92e5cb8a112e5ae1e241e5dd5d4d0818.png) 
 2. 进入**应用管理**页面，单击相应应用模板，进入应用详情页。
-![](https://main.qcloudimg.com/raw/2fbe4a0bc21d83a4da8e31a9351ff7ea.png)   
+![](https://main.qcloudimg.com/raw/5ec527632d96c1dcd07511724cb6d9b5.png)    
+3. 单击**进入应用页面编辑**进行 [步骤3](#step3) 店铺装修。完成 [步骤4](#step4) 后单击**外部数据管理**进入后台管理端，后台数据管理请参见 [步骤5](#step5)。
+![](https://main.qcloudimg.com/raw/9de03d53fe6c85f65c38f383ef429ec8.png)
 
-### 步骤3：小程序店铺装修
+### 步骤3：小程序店铺装修[](id:step3)
 
 您在装修过程中遇到任何问题，欢迎咨询模版提供客服。更多应用编辑器的具体说明，请参见 [应用编辑器概述](https://cloud.tencent.com/document/product/1301/53204)。
 
@@ -82,7 +84,7 @@
 
 如您需要更多操作帮助，请联系您的专属顾问。
 
-### 步骤4：创建模型应用
+### 步骤4：创建模型应用[](id:step4)
 1. 进入**应用管理**页面，单击**创建空白应用**，选择**模型应用**并单击**下一步**。
 ![](https://main.qcloudimg.com/raw/aede1dc19ac960c96ece3be805cbd71e.png)     
 2. 在**应用管理**页面中，单击上一步新建的空白应用，在其**应用详情**页面下单击**进入应用页面编辑**进入编辑器页面。
@@ -92,7 +94,7 @@
 4. 单击**访问链接**进入发布后的应用页面。
 ![](https://main.qcloudimg.com/raw/b07d2942c8224ef7da20b5b054e4c999.png)   
 
-### 步骤5： 数据管理
+### 步骤5：数据管理[](id:step5)
 
 在发布后的企业管理后台中，打开对应的列表页面，进行数据管理。
 
