--- a/product/移动与通信/云开发低代码平台/微搭应用市场/模板使用说明/微搭美妆小程序模板.md
+++ b/product/移动与通信/云开发低代码平台/微搭应用市场/模板使用说明/微搭美妆小程序模板.md
@@ -75,7 +75,7 @@
 ![](https://main.qcloudimg.com/raw/e84dc8aea4bbaed97ed7c418556d8976.png)     
 
 #### 设置页面跳转
-打开左侧大纲树选择对应的**容器**，进入右侧的**组件编辑** > **事件**页面中，可通过选择**触发条件**或修改**已添加动作**进行页面跳转的设置。
+打开左侧大纲树选择对应的**Tab 栏**导航组件，进入右侧的**组件编辑** > **事件**页面中，可通过选择**触发条件**或修改**已添加动作**进行页面跳转的设置。
 ![](https://main.qcloudimg.com/raw/d5d418dc2f1713bcf6b1e23cc61cb44d.png)  
 
 #### 定制事件响应
