--- a/product/移动与通信/云开发低代码平台/微搭应用市场/模板使用说明/律政服务小程序模板.md
+++ b/product/移动与通信/云开发低代码平台/微搭应用市场/模板使用说明/律政服务小程序模板.md
@@ -1,126 +1,98 @@
-### **第一步：购买和试用小程序**
+### 步骤1：购买和试用小程序
 
-[微搭应用市场](https://weda.cloud.tencent.com/)选购小程序，点击【试用7天】或【立即购买】下单，下单后跳到模版管理安装模版。
+进入 [微搭应用市场](https://weda.cloud.tencent.com/) 选购律政服务小程序，单击**试用7天**或**立即购买**下单。
+![](https://main.qcloudimg.com/raw/b772660609374e5fc0bb567a29739708.jpg)     
 
-​                 ![img](https://main.qcloudimg.com/raw/801ac64fa94ebb69290f8583c24f39d2.jpg)        
+### 步骤2：安装模版
 
-### **第二步：安装模版**
+1. 进入**模板管理** > **我的模板**页面，在模版列表单击**安装**，并填写自定义名称，单击**确认**，生成可拖拽的店铺应用。
+![](https://main.qcloudimg.com/raw/92e5cb8a112e5ae1e241e5dd5d4d0818.png) 
+2. 进入**应用管理**页面，单击相应应用模板，进入应用详情页。
+![](https://main.qcloudimg.com/raw/5ec527632d96c1dcd07511724cb6d9b5.png)    
+3. 单击**进入应用页面编辑**进行 [步骤3](#step3) 店铺装修。完成 [步骤4](#step4) 后单击**外部数据管理**进入后台管理端，后台数据管理请参见 [步骤5](#step5)。
+![](https://main.qcloudimg.com/raw/9de03d53fe6c85f65c38f383ef429ec8.png)
 
-在模版列表点击安装，并填写自定义名称，生成可拖拽的店铺应用。
+### 步骤3：小程序店铺装修[](id:step3)
 
-​                 ![img](https://main.qcloudimg.com/raw/1923a1393cdadc6bf0e6ecb9d15eb725.png)        
+您在装修过程中遇到任何问题，欢迎咨询模版提供客服。更多应用编辑器的具体说明，请参见 [应用编辑器概述](https://cloud.tencent.com/document/product/1301/53204)。
 
-模版安装的应用通过【应用管理】，进入应用详情页
+#### 首页轮播图装修
+打开左侧大纲树选择对应轮播图的**图片**，进入右侧的**组件编辑** > **数据**页面中，可通过修改**图片**链接进行轮播图的替换。
+![img](https://main.qcloudimg.com/raw/bae58c146622573ba53c7d4df471c433.png)        
 
-​                 ![img](https://main.qcloudimg.com/raw/3751241c6525747a2ed5396e70062a87.png)        
+#### 定制新增页面
+单击**创建新页面**进行定制新页面。
+![img](https://main.qcloudimg.com/raw/ef03599a28a5f99ee7695e73b521d4de.png)        
 
-点击【进入应用页面编辑】进行店铺装修，点击【外部数据管理】进入后台管理端
-
-​                 ![img](https://main.qcloudimg.com/raw/2ca106f7aeef67850ca8dbdf619aac96.png)        
-
-### **第三步： 小程序店铺装修**
-
-您在装修过程中遇到任何问题，欢迎咨询模版提供客服。
-
-装修编辑器整体介绍：
-
-​                 ![img](https://main.qcloudimg.com/raw/b1aa0548912c54fba7bfe11d9097976d.png)        
-
-​                 ![img](https://main.qcloudimg.com/raw/9ef44d4fad9f8f84c4994e9811c72afd.png)        
-
-- 【页面管理】支持切换页面，对所有页面进行个性化装修
-- 【编辑区】点击选中要编辑的组件
-- 【预览区】可查看页面效果
-- 【组建编辑】可按需修改您的个性化内容，包含数据（静态文本、图片）、样式、事件
-- 【组件】模版所带组件库，可用于新页面开发
-
-#### **1.  首页轮播图装修**
-
-​                 ![img](https://main.qcloudimg.com/raw/bae58c146622573ba53c7d4df471c433.png)        
-
-#### **2.  定制新增页面**
-
-​                 ![img](https://main.qcloudimg.com/raw/ef03599a28a5f99ee7695e73b521d4de.png)        
-
-**3.  设置页面跳转**
-
-​                 ![img](https://main.qcloudimg.com/raw/82980dd2c607ab3aead02311f4d7eed1.png)        
+#### 设置页面跳转
+打开左侧大纲树选择对应的**Tab 栏**导航组件，进入右侧的**组件编辑** > **事件**页面中，可通过选择**触发条件**或修改**已添加动作**进行页面跳转的设置。
+![img](https://main.qcloudimg.com/raw/82980dd2c607ab3aead02311f4d7eed1.png)        
 
 
 
-#### **4.** **关于我们页面装修**
+#### 关于我们页面装修
+打开左侧**页面管理**选择对应的页面，单击要修改的组件，进入右侧的**组件编辑** > **数据**页面中，可通过修改**文本内容**进行内容替换。
+![img](https://main.qcloudimg.com/raw/f6fcd92fde81bead8eba632aad31ae7a.png)        
 
-​                 ![img](https://main.qcloudimg.com/raw/b16a7863958493553681941bd21796fb.png)        
-
-​                 ![img](https://main.qcloudimg.com/raw/f6fcd92fde81bead8eba632aad31ae7a.png)        
-
-#### **5.  定制事件响应**
+#### 定制事件响应
 
 如您需要更多操作帮助，请联系您的专属顾问。
 
-### **第四步：** **创建模型应用**
 
-​                 ![img](https://main.qcloudimg.com/raw/3183437b33bb65496b46870d32740cbd.png)        
+### 步骤4：创建模型应用[](id:step4)
+1. 进入**应用管理**页面，单击**创建空白应用**，选择**模型应用**并单击**下一步**。
+![](https://main.qcloudimg.com/raw/aede1dc19ac960c96ece3be805cbd71e.png)     
+2. 在**应用管理**页面中，单击上一步新建的空白应用，在其**应用详情**页面下单击**进入应用页面编辑**进入编辑器页面。
+![](https://main.qcloudimg.com/raw/cf92702b3f165024e9eac05c12501071.png)
+3. 单击头部导航栏**发布**，跟根据实际情况选择发布方式并单击**下一步**。
+![img](https://main.qcloudimg.com/raw/1346bcee3b060d03245bfcd97baed57f.png)        
+4. 单击**访问链接**进入发布后的应用页面。
+![](https://main.qcloudimg.com/raw/b07d2942c8224ef7da20b5b054e4c999.png)      
 
-​                 ![img](https://main.qcloudimg.com/raw/0de687fc589adccfab8a582ba7c44080.png)        
-
-​                 ![img](https://main.qcloudimg.com/raw/d7adbd90b78ad62e2e2952ecd8a01e6e.png)        
-
-​                 ![img](https://main.qcloudimg.com/raw/c125952b56c4dc1e7482daff721d8771.png)        
 
 
-
-### **第五步：****数据管理**
+### 步骤5：数据管理[](id:step5)
 
 在发布后的企业管理后台中，打开对应的列表页面，进行数据管理。
 
-1. 首页轮播图
-
-​                 ![img](https://main.qcloudimg.com/raw/f75b1f8d2c60be50a957aa127593ef6c.png)      
+#### 首页轮播图
+<img src = "https://main.qcloudimg.com/raw/f75b1f8d2c60be50a957aa127593ef6c.png" style="width: 60%">     
 
  如果要修改首页的轮播图，请到后台数据管理页面，找到对应的页面，修改里面的内容。
+![](https://main.qcloudimg.com/raw/563276f0ed2dcffc4dc9f69d9ca36edb.png)  
 
-​                 ![img](https://main.qcloudimg.com/raw/bc21145936c19fd859ba21115e88e576.png)        
-
-1. 管理法律服务的内容
-
-​                 ![img](https://main.qcloudimg.com/raw/8b8ac9cf01d97454e1eba0795da8aa3a.png)        
+#### 管理法律服务的内容
+<img src = "https://main.qcloudimg.com/raw/8b8ac9cf01d97454e1eba0795da8aa3a.png" style="width: 60%">          
 
 如果要修改首页的法律服务内容，请到后台数据管理页面，找到对应的页面，修改里面的内容。
+![](https://main.qcloudimg.com/raw/46d67e756d57eca27e89683d694a8e0f.png)   
 
-​                 ![img](https://main.qcloudimg.com/raw/ba88f99615c70fdcb738d4753f9bbc5c.png)        
-
-1. 律师管理
-
-​                 ![img](https://main.qcloudimg.com/raw/07142246d515e8ebb9d922ff8a766586.png)        
+#### 律师管理
+<img src = "https://main.qcloudimg.com/raw/bfcfe8c01d857032826f60845b4c6f7c.png" style="width: 60%">    
 
 如果要修改首页的中的律师展示，请到后台数据管理页面，找到对应的页面，修改里面的内容。
+![](https://main.qcloudimg.com/raw/b18ed4c409c003fdef97563ea3af0f55.png)     
 
-​                 ![img](https://main.qcloudimg.com/raw/72a63c97c693ad6ef6ea1cb98d48754f.png)        
-
-1. 查看法律资讯留言
+#### 查看法律资讯留言
 
 在小程序端，用户提交法律资讯留言后，在后台数据中，可以查看到留言内容。
+![](https://main.qcloudimg.com/raw/04db9c75f2496dc38e39e6404ac9c866.png) 
 
-​                 ![img](https://main.qcloudimg.com/raw/0458df94cc87fe61f664aa5342ed756b.png)        
-
-1. 常见问题管理
-
-​                 ![img](https://main.qcloudimg.com/raw/6b0c2ecb6e9930955c0998ad13f72100.png)        
+#### 常见问题管理
+<img src = "https://main.qcloudimg.com/raw/6b0c2ecb6e9930955c0998ad13f72100.png" style="width: 60%">           
 
 如果要修改常见问题，请到后台数据管理页面，找到对应的页面，修改里面的内容。
+![](https://main.qcloudimg.com/raw/af587197b101d56d5c9b3ef987c82370.png)    
 
-​                 ![img](https://main.qcloudimg.com/raw/72236750c7272bdbf12224ce186363cc.png)        
-
-1. 成功案例管理
-
-​                 ![img](https://main.qcloudimg.com/raw/261f851d36cb10cd41c3893b1a8ef136.png)        
+#### 成功案例管理
+<img src = "https://main.qcloudimg.com/raw/261f851d36cb10cd41c3893b1a8ef136.png" style="width: 60%">          
 
 如果要修改成功案例，请到后台数据管理页面，找到对应的页面，修改里面的内容
+![](https://main.qcloudimg.com/raw/7beeee3a00d147ea2e8cc3f3b98c0447.png)    
 
-​                 ![img](https://main.qcloudimg.com/raw/8a1e75809b7b12ac8d0a48d62a93fe33.png)        
 
-### **第六步： 3分钟完成小程序预览/发布**
 
-请移步 [小程序发布文档](https://cloud.tencent.com/document/product/1301/55140)
+### 步骤6：3分钟完成小程序预览或发布
+
+详情请参见 [小程序发布](https://cloud.tencent.com/document/product/1301/55140)。
 
