--- a/product/移动与通信/云开发低代码平台/微搭应用市场/模板使用说明/汽车4S店报价小程序模板.md
+++ b/product/移动与通信/云开发低代码平台/微搭应用市场/模板使用说明/汽车4S店报价小程序模板.md
@@ -1,112 +1,87 @@
-### **第一步：购买和试用小程序**
+### 步骤1：购买和试用小程序
 
-[微搭应用市场](https://weda.cloud.tencent.com/)选购小程序，点击【试用7天】或【立即购买】下单，下单后跳到模版管理安装模版。
+进入 [微搭应用市场](https://weda.cloud.tencent.com/) 选购汽车4S店报价小程序，单击**试用7天**或**立即购买**下单。
+![](https://main.qcloudimg.com/raw/1708a444d187faed7e21779b144ecb66.jpg)
 
-​                 ![img](https://main.qcloudimg.com/raw/a18477eddc43b61e65204b500d667ca2.jpg)        
+### 步骤2：安装模版
 
-### **第二步：安装模版**
+1. 进入**模板管理** > **我的模板**页面，在模版列表单击**安装**，并填写自定义名称，单击**确认**，生成可拖拽的店铺应用。
+![](https://main.qcloudimg.com/raw/92e5cb8a112e5ae1e241e5dd5d4d0818.png) 
+2. 进入**应用管理**页面，单击相应应用模板，进入应用详情页。
+![](https://main.qcloudimg.com/raw/5ec527632d96c1dcd07511724cb6d9b5.png)    
+3. 单击**进入应用页面编辑**进行 [步骤3](#step3) 店铺装修。完成 [步骤4](#step4) 后单击**外部数据管理**进入后台管理端，后台数据管理请参见 [步骤5](#step5)。
+![](https://main.qcloudimg.com/raw/9de03d53fe6c85f65c38f383ef429ec8.png)
+        
 
-在模版列表点击安装，并填写自定义名称，生成可拖拽的店铺应用。
 
-​                 ![img](https://main.qcloudimg.com/raw/f3f40c218cdc1e7b2b2c719280e073e1.png)        
+### 步骤3：小程序店铺装修[](id:step3)
 
-模版安装的应用通过【应用管理】，进入应用详情页
+您在装修过程中遇到任何问题，欢迎咨询模版提供客服。更多应用编辑器的具体说明，请参见 [应用编辑器概述](https://cloud.tencent.com/document/product/1301/53204)。
 
-​                 ![img](https://main.qcloudimg.com/raw/89be2cd7e25840f8d2f5f2dc6489e70c.png)        
+#### 首页轮播图装修
+打开左侧大纲树选择对应轮播图的**图片**，进入右侧的**组件编辑** > **数据**页面中，可通过修改**图片**链接进行首页轮播图的替换。
+![img](https://main.qcloudimg.com/raw/0b00a4fbf2f19a548ab932975965e18d.png)        
 
-### **第三步： 小程序店铺装修**
+#### 定制新增页面
+单击**创建新页面**进行定制新页面。
+![img](https://main.qcloudimg.com/raw/8995859c5187c58adfa0537dbe15d9b1.png)        
 
-您在装修过程中遇到任何问题，欢迎咨询模版提供客服。
+#### 设置页面跳转            
+打开左侧大纲树选择对应的**Tab 栏**导航组件，进入右侧的**组件编辑** > **事件**页面中，可通过选择**触发条件**或修改**已添加动作**进行页面跳转的设置。
+![img](https://main.qcloudimg.com/raw/3779e88d40f861ea62ae997c1d9db3af.png)        
 
-装修编辑器整体介绍：
-
-​                 ![img](https://main.qcloudimg.com/raw/0f506bb2478025f526ddf3d0b96a8ac6.png)        
-
-​                 ![img](https://main.qcloudimg.com/raw/eedb82ffd4065934c1e8f426e466c14f.png)        
-
-- 【页面管理】支持切换页面，对所有页面进行个性化装修
-- 【编辑区】点击选中要编辑的组件
-- 【预览区】可查看页面效果
-- 【组建编辑】可按需修改您的个性化内容，包含数据（静态文本、图片）、样式、事件
-- 【组件】模版所带组件库，可用于新页面开发
-
-#### **1.  首页轮播图装修**
-
-​                 ![img](https://main.qcloudimg.com/raw/0b00a4fbf2f19a548ab932975965e18d.png)        
-
-#### **2.  定制新增页面**
-
-​                 ![img](https://main.qcloudimg.com/raw/8995859c5187c58adfa0537dbe15d9b1.png)        
-
-#### **3.  设置页面跳转**                 
-
-#### ![img](https://main.qcloudimg.com/raw/3779e88d40f861ea62ae997c1d9db3af.png)        
-
-#### **4.  定制事件响应**
+#### 定制事件响应
 
 如您需要更多操作帮助，请联系您的专属顾问。
 
-### **第四步：** **创建模型应用**
+### 步骤4：创建模型应用[](id:step4)
+1. 进入**应用管理**页面，单击**创建空白应用**，选择**模型应用**并单击**下一步**。
+![](https://main.qcloudimg.com/raw/aede1dc19ac960c96ece3be805cbd71e.png)     
+2. 在**应用管理**页面中，单击上一步新建的空白应用，在其**应用详情**页面下单击**进入应用页面编辑**进入编辑器页面。
+![](https://main.qcloudimg.com/raw/cf92702b3f165024e9eac05c12501071.png)
+3. 单击头部导航栏**发布**，跟根据实际情况选择发布方式并单击**下一步**。
+![img](https://main.qcloudimg.com/raw/1346bcee3b060d03245bfcd97baed57f.png)        
+4. 单击**访问链接**进入发布后的应用页面。
+![](https://main.qcloudimg.com/raw/b07d2942c8224ef7da20b5b054e4c999.png)     
 
-​                 ![img](https://main.qcloudimg.com/raw/e7d522c0dff21c276fe2e8b187cedeaf.png)        
-
-​                 ![img](https://main.qcloudimg.com/raw/8c21d3f76bf6e7c222dfe18f4d60502f.png)        
-
-​                 ![img](https://main.qcloudimg.com/raw/4cb3d64d6e59d7ce8f91c83c82917b4e.png)        
-
-​                 ![img](https://main.qcloudimg.com/raw/5977cb4747ecf0d9032b93075691e3b9.png)        
 
 
-
-### **第五步：**数据管理
+### 步骤5：数据管理[](id:step5)
 
 在发布后的企业管理后台中，打开对应的列表页面，进行数据管理。
 
-1. 店铺信息
-
-​                 ![img](https://main.qcloudimg.com/raw/c4e4687668b0e88254bdbb6d272286b5.png)                     
-
-
-
-​    ![img](https://main.qcloudimg.com/raw/97cc1abaf78a173e56062992dc738d87.png)        
+#### 店铺信息
+<img src = "https://main.qcloudimg.com/raw/f1c89496d3f4f14130ef34ab61b62475.png" style="width: 60%">     
 
 如果要修改店铺信息，请到后台数据管理页面，找到对应的页面，修改里面的内容。
+![](https://main.qcloudimg.com/raw/1f47fec8dfa66032e848de02f21230be.png)      
 
-​                 ![img](https://main.qcloudimg.com/raw/53ee336852cf08cf5ea110dd622b5b5b.png)        
-
-1. 车型列表
-
-​                 ![img](https://main.qcloudimg.com/raw/9c707b62f030c4c07c8883b0d5f045a4.png)        
+#### 车型列表
+<img src = "https://main.qcloudimg.com/raw/f546c8bfd775471dca8fe9c77ee45660.png" style="width: 60%">         
 
 如果要修改车型列表信息，请到后台数据管理页面，找到对应的页面，修改里面的内容。
+![](https://main.qcloudimg.com/raw/e72d4b6a1e0643991760cd5b22d144df.png)
 
-​                 ![img](https://main.qcloudimg.com/raw/fa3d4ad629b1a516f91d53234967f7d6.png)        
-
-1. 车辆列表
-
-​                 ![img](https://main.qcloudimg.com/raw/3601b9039ed8a0f9aef50f6717c8f97f.png)        
+#### 车辆列表
+<img src = "https://main.qcloudimg.com/raw/af3f103c09388695db763846bea6d766.png" style="width: 60%">         
 
 如果要修改车辆信息，请到后台数据管理页面，找到对应的页面，修改里面的内容。
+![](https://main.qcloudimg.com/raw/69a48bdb318f6c16d44180d527d0cb81.png)    
 
-​                 ![img](https://main.qcloudimg.com/raw/0aff72c529f57c0ac1cb881316a7b70b.png)        
+#### 新闻列表
+<img src = "https://main.qcloudimg.com/raw/26f6115eb0aaa2a5a168c8122f97f43e.png" style="width: 60%">         
 
-1. 新闻列表
+如果要修改新闻信息，请到后台数据管理页面，找到对应的页面，修改里面的内容。
+![](https://main.qcloudimg.com/raw/75d98c379a9ef19c07f038d07edbbc0e.png)    
 
-​                 ![img](https://main.qcloudimg.com/raw/599a288ab40e93d47aa1709b30dfdff0.png)      
-
-  如果要修改新闻信息，请到后台数据管理页面，找到对应的页面，修改里面的内容。
-
-​                 ![img](https://main.qcloudimg.com/raw/fec3df6b2d9bdb3fd964384127b4c18b.png)        
-
-1. 咨询列表
-
-​                 ![img](https://main.qcloudimg.com/raw/9cbd0488519ab400800d9d4b32623b6c.png)        
+#### 咨询列表
+<img src = "https://main.qcloudimg.com/raw/b7a7c4fcad83ef6310805f0e79ab2578.png" style="width: 60%">      
 
 如果要查看咨询列表，在后台数据管理页面中，找到对应的页面，查看咨询信息
+![](https://main.qcloudimg.com/raw/44c0bccfad58bd4488a652aeba2d7bc3.png)     
 
-​                 ![img](https://main.qcloudimg.com/raw/8c944339328c818a8abba8b5ea7a7575.png)        
 
-### 第六步： 3分钟完成小程序预览/发布
+### 步骤6：3分钟完成小程序预览或发布
 
-请移步 [小程序发布文档](https://cloud.tencent.com/document/product/1301/55140)
+详情请参见 [小程序发布](https://cloud.tencent.com/document/product/1301/55140)。
 
