--- a/product/移动与通信/云开发低代码平台/微搭应用市场/模板使用说明/汽车服务小程序模板.md
+++ b/product/移动与通信/云开发低代码平台/微搭应用市场/模板使用说明/汽车服务小程序模板.md
@@ -1,112 +1,91 @@
-### **第一步：购买和试用小程序**
+### 步骤1：购买和试用小程序
 
-[微搭应用市场](https://weda.cloud.tencent.com/)选购小程序，点击【试用7天】或【立即购买】下单，下单后跳到模版管理安装模版。
+进入 [微搭应用市场](https://weda.cloud.tencent.com/) 选购汽车服务小程序，单击**试用7天**或**立即购买**下单。
+![](https://main.qcloudimg.com/raw/3133db23a1aeb974557bff24b4cf4d15.jpg) 
 
-​                 ![img](https://main.qcloudimg.com/raw/153c3d1baf1c4860dd0287c40ff352f3.jpg)        
+### 步骤2：安装模版
 
-### **第二步：安装模版**
+1. 进入**模板管理** > **我的模板**页面，在模版列表单击**安装**，并填写自定义名称，单击**确认**，生成可拖拽的店铺应用。
+![](https://main.qcloudimg.com/raw/92e5cb8a112e5ae1e241e5dd5d4d0818.png) 
+2. 进入**应用管理**页面，单击相应应用模板，进入应用详情页。
+![](https://main.qcloudimg.com/raw/5ec527632d96c1dcd07511724cb6d9b5.png)    
+3. 单击**进入应用页面编辑**进行 [步骤3](#step3) 店铺装修。完成 [步骤4](#step4) 后单击**外部数据管理**进入后台管理端，后台数据管理请参见 [步骤5](#step5)。
+![](https://main.qcloudimg.com/raw/9de03d53fe6c85f65c38f383ef429ec8.png)
+        
 
-在模版列表点击安装，并填写自定义名称，生成可拖拽的店铺应用。
 
-​                 ![img](https://main.qcloudimg.com/raw/554ec7cd8a70c783bacc61b61dc35b0b.png)        
+### 步骤3：小程序店铺装修[](id:step3)
 
-模版安装的应用通过【应用管理】，进入应用详情页
+您在装修过程中遇到任何问题，欢迎咨询模版提供客服。更多应用编辑器的具体说明，请参见 [应用编辑器概述](https://cloud.tencent.com/document/product/1301/53204)。
 
-​                 ![img](https://main.qcloudimg.com/raw/370909696e1e9050109e8a73d5c0e3ab.png)        
 
-### **第三步： 小程序店铺装修**
+#### 首页轮播图装修
+打开左侧大纲树选择对应轮播图的**图片**，进入右侧的**组件编辑** > **数据**页面中，可通过修改**图片**链接进行轮播图的替换。
+![img](https://main.qcloudimg.com/raw/a41f53f70882ea31c24637b823006f2b.png)        
 
-您在装修过程中遇到任何问题，欢迎咨询模版提供客服。
+#### 定制新增页面
+单击**创建新页面**进行定制新页面。
+![img](https://main.qcloudimg.com/raw/0d9d4e5a60e296737e9807185a699235.png)        
 
-装修编辑器整体介绍：
+#### 设置页面跳转
+打开左侧大纲树选择对应的**Tab 栏**导航组件，进入右侧的**组件编辑** > **事件**页面中，可通过选择**触发条件**或修改**已添加动作**进行页面跳转的设置。
+![img](https://main.qcloudimg.com/raw/cdb1eaac2e9fa66b84f3c3fe753a3850.png)        
 
-​                 ![img](https://main.qcloudimg.com/raw/279b8b31e5d242850a010651780c6c99.png)        
-
-​                 ![img](https://main.qcloudimg.com/raw/80d3eb577e6049aa4173b8a0714155f2.png)        
-
-- 【页面管理】支持切换页面，对所有页面进行个性化装修
-- 【编辑区】点击选中要编辑的组件
-- 【预览区】可查看页面效果
-- 【组建编辑】可按需修改您的个性化内容，包含数据（静态文本、图片）、样式、事件
-- 【组件】模版所带组件库，可用于新页面开发
-
-#### **1.  首页轮播图装修**
-
-​                 ![img](https://main.qcloudimg.com/raw/a41f53f70882ea31c24637b823006f2b.png)        
-
-#### **2.  定制新增页面**
-
-​                 ![img](https://main.qcloudimg.com/raw/0d9d4e5a60e296737e9807185a699235.png)        
-
-#### **3.  设置页面跳转**                 ![img](https://main.qcloudimg.com/raw/cdb1eaac2e9fa66b84f3c3fe753a3850.png)        **4.  定制事件响应**
+#### 定制事件响应
 
 如您需要更多操作帮助，请联系您的专属顾问。
 
-### 第四步：创建模型应用
+### 步骤4：创建模型应用[](id:step4)
+1. 进入**应用管理**页面，单击**创建空白应用**，选择**模型应用**并单击**下一步**。
+![](https://main.qcloudimg.com/raw/aede1dc19ac960c96ece3be805cbd71e.png)     
+2. 在**应用管理**页面中，单击上一步新建的空白应用，在其**应用详情**页面下单击**进入应用页面编辑**进入编辑器页面。
+![](https://main.qcloudimg.com/raw/cf92702b3f165024e9eac05c12501071.png)
+3. 单击头部导航栏**发布**，跟根据实际情况选择发布方式并单击**下一步**。
+![img](https://main.qcloudimg.com/raw/1346bcee3b060d03245bfcd97baed57f.png)        
+4. 单击**访问链接**进入发布后的应用页面。
+![](https://main.qcloudimg.com/raw/b07d2942c8224ef7da20b5b054e4c999.png)        
 
-​                 ![img](https://main.qcloudimg.com/raw/a574ba0f03bd4ea8972143e242db9663.png)        
 
-​                 ![img](https://main.qcloudimg.com/raw/ccc7445c310d36b6eac7f251164cc7f8.png)        
-
-​                 ![img](https://main.qcloudimg.com/raw/23e606cf94908b03e72945f0bc869dd0.png)        
-
-​                 ![img](https://main.qcloudimg.com/raw/ff1fa47b983eb3f5cf40eb84a7952d6c.png)        
-
-
-
-### **第五步：** **数据管理**
+### 步骤5：数据管理[](id:step5)
 
 在发布后的企业管理后台中，打开对应的列表页面，进行数据管理。
 
-1. 查看预约
+#### 查看预约
+<img src = "https://main.qcloudimg.com/raw/8dea9561247cecfbb8f2530c41ea23e4.png" style="width: 60%">
 
-​                 ![img](https://main.qcloudimg.com/raw/76d689b47a3f1104bde2e472350b1132.png)     
+用户在小程序端提交预约后，在后台数据管理页面中，找到对应的页面，查看预约内容。
+![](https://main.qcloudimg.com/raw/c273f0741cfadd060bbb4038f3d06757.png)  
 
-   用户在小程序端提交预约后，在后台数据管理页面中，找到对应的页面，查看预约内容。
-
-​                 ![img](https://main.qcloudimg.com/raw/a1699fa9436ab8044a2c26c2cf4ce788.png)        
-
-1. 最新活动
-
-​                 ![img](https://main.qcloudimg.com/raw/a11c0672e014fb36ef9bdacad5a8aa6b.png)        
+#### 最新活动
+<img src = "https://main.qcloudimg.com/raw/a11c0672e014fb36ef9bdacad5a8aa6b.png" style="width: 60%">   
 
 如果要修改页面上的最新活动，请到后台数据管理页面，找到对应的页面，修改里面的内容。
+![](https://main.qcloudimg.com/raw/41b5923b667e809c190d8fbc0bd640ff.png)      
 
-​                 ![img](https://main.qcloudimg.com/raw/4d953e131d311b8046a31af2e18dc8e8.png)        
-
-1. 服务类型
-
-​                 ![img](https://main.qcloudimg.com/raw/f36acfb5c7cd4ae815becbb66c1a023f.png)        
+#### 服务类型
+<img src = "https://main.qcloudimg.com/raw/f36acfb5c7cd4ae815becbb66c1a023f.png" style="width: 60%">   
 
 如果要修改页面上的服务类型，请到后台数据管理页面，找到对应的页面，修改里面的内容。
+![](https://main.qcloudimg.com/raw/de238cda7e67a73fd74255df932a67b3.png)      
 
-​                 ![img](https://main.qcloudimg.com/raw/bef4a07834d307a0b54bfa8e9e23ad2a.png)        
+#### 服务详情
+<img src = "https://main.qcloudimg.com/raw/74c6628274b8c1f71858865b4ebbea95.png" style="width: 60%">      
 
-1. 服务详情
+如果要修改页面上的服务详情，请到后台数据管理页面，找到对应的页面，修改里面的内![](https://main.qcloudimg.com/raw/c9f9672f81a67dda8e6d6fd149939d9d.png)   
 
-​                 ![img](https://main.qcloudimg.com/raw/57bad04a0ec2a68c13db3d11262ca236.png)      
-
-  如果要修改页面上的服务详情，请到后台数据管理页面，找到对应的页面，修改里面的内容。
-
-​                 ![img](https://main.qcloudimg.com/raw/7f42684c8deec628213c8591b1d84039.png)        
-
-1. 关于我们
-
-​                 ![img](https://main.qcloudimg.com/raw/005b6e1382931de513054e25585d8f23.png)        
+#### 关于我们
+<img src = "https://main.qcloudimg.com/raw/005b6e1382931de513054e25585d8f23.png" style="width: 60%">           
 
 如果要修改页面上的关于我们，请到后台数据管理页面，找到对应的页面，修改里面的内容。
+![](https://main.qcloudimg.com/raw/0e530773fe1b9803ceb43760053ae8df.png)       
 
-​                 ![img](https://main.qcloudimg.com/raw/fd011bedeebfd5ac089c69346dbbf28b.png)        
-
-1. 企业环境
-
-​                 ![img](https://main.qcloudimg.com/raw/afc1955ff321a7c08a720197fc67b914.png)        
+#### 企业环境
+<img src = "https://main.qcloudimg.com/raw/afc1955ff321a7c08a720197fc67b914.png" style="width: 60%">    
 
 如果要修改企业环境的内容，在后台数据管理页面中，找到对应的页面，修改信息。
+![](https://main.qcloudimg.com/raw/8856d7b222f979c015cfe63bbecc1895.png)       
 
-​                 ![img](https://main.qcloudimg.com/raw/bd679b0db3f2b0a4cf50999bee92c1bd.png)        
+### 步骤6：3分钟完成小程序预览或发布
 
-### 第六步： 3分钟完成小程序预览/发布
-
-请移步 [小程序发布文档](https://cloud.tencent.com/document/product/1301/55140)
+详情请参见 [小程序发布](https://cloud.tencent.com/document/product/1301/55140)。
 
