--- a/product/物联网/物联网开发平台/应用开发指南/应用端 API/数据查询.md
+++ b/product/物联网/物联网开发平台/应用开发指南/应用端 API/数据查询.md
@@ -10,7 +10,7 @@
 | --------- | ------ | ---- | ------------------------------------------------- |
 | Action    | String | 是   | AppGetDeviceAggsData                              |
 | DeviceId  | String | 是   | 设备 ID，由"产品 ID/DeviceName"组成                 |
-| AggMethod | String | 是   | 聚合类型（avg/min/max 之一）                       |
+| AggMethod | String | 是   | 聚合类型（sum/avg/min/max 之一）                     |
 | Interval  | String | 是   | 聚合时间（10m/30m/1h /1d 等）                      |
 | FieldName | String | 是   | 聚合的属性名，必须是整数或者浮点数                |
 | MinTime | UINT   | 否   | 聚合的开始时间，毫秒精度，缺省是 EndTime 24小时前 |
