--- a/product/安全服务/数据安全治理中心/公告/产品正式商业化公告.md
+++ b/product/安全服务/数据安全治理中心/公告/产品正式商业化公告.md
@@ -1,6 +1,6 @@
 数据安全中心自2021年6月1日公测以来，已陆续发布4个版本，现已正式商业化。为回馈广大用户，数据安全中心仍保留免费版，您可免费使用数据安全中心的基本能力（限一个数据资产）。
 
-购买高级的用户，可使用更多进阶能力：
+购买高级版的用户，可使用更多进阶能力：
 
 1.更多数据资产支持。
 
