--- a/product/企业协同/腾讯会议/操作指南/音频和视频管理/直播/开启直播.md
+++ b/product/企业协同/腾讯会议/操作指南/音频和视频管理/直播/开启直播.md
@@ -22,18 +22,18 @@
 - 直播画面将跟随主持人客户端画面变化。
 
 ## 开启直播
-- 在预定会议时，可以单击**直播设置**设置直播参数，也可以单击会议中工具栏中的**应用 > 直播**进行设置，支持设置直播主题、直播简介、开启直播密码、允许观众讨论/开启直播回看等参数。
-- 进入会议中，单击工具栏中的**应用 > 直播**进入直播操作台，免费版用户首次使用直播前，需要进行人脸识别认证；直播操作台显示当前直播状态与当前直播在线人数等数据。
-- 预览直播画面：
+1. 在预定会议时，可以单击**直播设置**设置直播参数，也可以单击会议中工具栏中的**应用 > 直播**进行设置，支持设置直播主题、直播简介、开启直播密码、允许观众讨论/开启直播回看等参数。
+2. 进入会议中，单击工具栏中的**应用 > 直播**进入直播操作台，免费版用户首次使用直播前，需要进行人脸识别认证；直播操作台显示当前直播状态与当前直播在线人数等数据。
+3. 预览直播画面：
  - 直播操作台可以预览直播画面，直播未开始时您可以通过预览画面了解直播后的画面内容，预览画面将和直播画面保持同步。
  - 预览画面默认无声音，直播声音将与会议保持一致。
-- 设置直播布局：
+4. 设置直播布局：
  - 直播布局将和主持人的会议客户端布局保持一致，所见即所得。
  - 布局一致，如果主持人选择宫格布局，则直播同步宫格布局画面。
  - 操作一致，如果主持人在客户端收起右侧列表，全屏观看，直播也会同步全屏。
-- 设置自定义布局：
-对于企业版用户，支持设置会议自定义布局，直播也会同步设置完成的自定义布局。
-
+5. 设置自定义布局：对于企业版用户，支持设置会议自定义布局，直播也会同步设置完成的自定义布局。
+6. 设置直播推流，具体请参考 [推流到第三方平台](https://cloud.tencent.com/document/product/1095/53707) 以及 [推流到微信视频号](https://cloud.tencent.com/document/product/1095/53789)。
+7. 设置完成，单击开始直播即可开启直播。
 
 ## 邀请其他用户观看直播
 复制直播设置页中的直播间地址，或者将邀请链接（预约直播后，直播间的链接会自动加入到邀请链接中）分享给其他人。观众单击直播间链接，即可通过浏览器进入您的直播间，观看会议直播。
