--- a/product/计算与网络/专线接入/操作指南18-08-27/管理专用通道/修改专用通道.md
+++ b/product/计算与网络/专线接入/操作指南18-08-27/管理专用通道/修改专用通道.md
@@ -27,12 +27,12 @@
 拆分为：`192.168.0.0/17` + `192.168.128.0/17`。
 
 ## 变更通道路由
-1. 登录 [专线接入控制台](https://console.cloud.tencent.com/dc/conn)，在左侧导航栏单击【专用通道】。
-2. 在“专用通道”页面，在需要变更参数的通道右侧“操作”列选择【更多】>【通道变更】。
+1. 登录 [专线接入控制台](https://console.cloud.tencent.com/dc/conn)，在左侧导航栏单击**专用通道**。
+2. 在“专用通道”页面，在需要变更参数的通道右侧“操作”列选择**更多** > **通道变更**。
 ![](https://main.qcloudimg.com/raw/3719a18adc9f02ebd04f5cd0c2fdb334.png)
 3. 按您的专用通道类型，选择对应的方式修改专用通道信息，专用通道类型请在该通道“基本信息”页面查看。
  - **专用通道1.0**
-在“通道变更”对话框中编辑以下信息，并单击【确定】。
+在“通道变更”对话框中编辑以下信息，并单击**确定**。
 ![](https://main.qcloudimg.com/raw/b181ef8f7b7c50eaa466182dcb7fa23b.png)
 <table>
 <tr>
@@ -67,7 +67,7 @@
  - **专用通道 2.0**
 在“高级通道”页签中，按需修改以下信息：
     - 修改通道配置
-在“通道配置”右侧单击【编辑】，然后在展开的编辑页面修改腾讯云边界 IP、用户边界 IP 和 VLAN ID、Jumbo 帧等信息，并单击【保存】。
+在“通道配置”右侧单击**编辑**，然后在展开的编辑页面修改腾讯云边界 IP、用户边界 IP 和 VLAN ID、Jumbo 帧等信息，并单击**保存**。
 >?帧是数据链路层的协议数据单元，由很多个字节组成，以太网帧大小一般为1500字节，实际传输的帧的大小通常由设备的最大传输单元 MTU 来确定，即设备单次能够传输的最大字节数。Jumbo 帧是比标准以太网帧更大的帧，通常可称为巨型帧。
 >
 <img src="https://main.qcloudimg.com/raw/3ef80a6b4ad3f3297f54c32de489e4c2.png" width="80%" />
@@ -93,7 +93,7 @@
 </tr>
 </table>
     - 编辑路由模式
-      1. 在“路由模式”右侧单击【编辑】，并在展开区域内修改路由信息。
+      1. 在“路由模式”右侧单击**编辑**，并在展开区域内修改路由信息。
              - 静态路由模式：修改用户 IDC 网段信息。为确保网络的精细化调度能力，IDC 网段信息请遵循[ 大网段使用限制](#dwdxz)。
  ![](https://main.qcloudimg.com/raw/f8eea7913f3b8de5f3e0de15eaf33cbc.png)
              - BGP 路由模式：修改 BGP asn 和 BGP 密钥。
@@ -113,8 +113,8 @@
 		</tr>
 		</table>
       2. 变更健康检查。
-          详情请参见 [专用通道健康检查]()。
-      3. 单击【确定】。
+          详情请参见 [专用通道健康检查](https://cloud.tencent.com/document/product/216/56667)。
+      3. 单击**确定**。
       通道变更需求提交后，系统将在几分钟内（具体时间依据网络情况而定）完成设备配置。
 
 
