增加向下兼容指南，增加GetObjectUrl接口，修复限速示例问题

--- a/product/存储与CDN/对象存储 4.0/SDK文档/.NET SDK/快速入门.md
+++ b/product/存储与CDN/对象存储 4.0/SDK文档/.NET SDK/快速入门.md
@@ -18,7 +18,7 @@
 
 .NET SDK 基于 .NET Standard 2.0 开发。
 
-- Windows：安装 .NET Core 2.0 及以上版本，或者 .NET Framework 4.6.1 及以上版本。 
+- Windows：安装 .NET Core 2.0 及以上版本，或者 .NET Framework 2.0 及以上版本。 
 - Linux/Mac：安装 .NET Core 2.0 及以上版本。
 
 #### 添加 SDK
@@ -34,6 +34,20 @@
 ```sh
 dotnet add package Tencent.QCloud.Cos.Sdk
 ```
+
+如果是用于目标框架 .Net Framework 4.0 及以下版本的开发，
+
+请使用 [Releases](https://github.com/tencentyun/qcloud-sdk-dotnet/releases) 下载的COSXML-Compatible.dll文件
+
+在Visual Studio项目中选择 
+
+```
+项目 -> 添加引用 -> 浏览 -> COSXML-Compatible.dll 的方式添加C# SDK
+```
+
+关于C# SDK的向下兼容特性，参见 [向下兼容指南](向下兼容指南.md)
+
+您也可以在 [Releases 里面](https://github.com/tencentyun/qcloud-sdk-dotnet/releases) 手动下载我们的SDK。
 
 ## 第二步：初始化 COS 服务
 
