--- a/product/计算与网络/专线接入/操作指南18-08-27/管理专用通道/专线通道健康检查.md
+++ b/product/计算与网络/专线接入/操作指南18-08-27/管理专用通道/专线通道健康检查.md
@@ -22,23 +22,30 @@
     - 快速定位网络故障。
 
 ## 通道健康检查
-
-1. 登录 [专线接入控制台](https://console.cloud.tencent.com/dc/conn)，在左侧导航栏单击【专用通道】。
+1. 登录 [专线接入控制台](https://console.cloud.tencent.com/dc/conn)，在左侧导航栏单击**专用通道**。
 2. 在“专用通道”页面，单击待健康检查的通道名称。
     ![](https://main.qcloudimg.com/raw/1dc76b3dfadff519a47c02a48e28425e.png)
-3. 在通道详情页的“高级通道”页签中，单击【路由模式】右侧【编辑】。
-4. 在【健康检查】所在行开启该功能。
+3. 在通道详情页的“高级通道”页签中，单击**路由模式**右侧**编辑**。
+4. 在**健康检查**所在行开启该功能。
 5. 配置健康检查参数。
     ![](https://main.qcloudimg.com/raw/3b7f016f686cfe64e642e75f3dccaa9a.png)
-		
-| 字段 | 含义 |
-|---------|---------|
-| BFD | <ul><li>健康检查间隔：两次健康检查的间隔时间，范围为[1000,3000]，单位为毫秒。</li><li>健康检查次数：若连续执行设定次数的健康检查失败后，则执行路由切换。</li></ul> |
-| NQA |  <ul><li>健康检查间隔：两次健康检查的间隔时间，范围为[1000,5000]，单位为毫秒。</li><li>健康检查次数：若连续执行设定次数的健康检查失败后，则执行路由切换。 |
-
+<table>
+<tr>
+<th>字段</th>
+<th>含义</th>
+<tr>
+<tr>
+<td>BFD</td>
+<td><ul><li>健康检查间隔：两次健康检查的间隔时间，范围为[1000,3000]，单位为毫秒。</li><li>健康检查次数：若连续执行设定次数的健康检查失败后，则执行路由切换。</li></ul></td>
+<tr>
+ <tr>
+<td>NQA</td>
+<td><ul><li>健康检查间隔：两次健康检查的间隔时间，范围为[1000,5000]，单位为毫秒。</li><li>健康检查次数：若连续执行设定次数的健康检查失败后，则执行路由切换。</li></ul></td>
+<tr>
+</table>
 >?
-- 支持 NQA 和 BFD 两种模式相互切换，切换后，系统依据当前的模式进行健康检查。
-- 如需使用 NQA 功能请 [提交工单](https://console.cloud.tencent.com/workorder/category)。
+>- 支持 NQA 和 BFD 两种模式相互切换，切换后，系统依据当前的模式进行健康检查。
+>- 如需使用 NQA 功能请 [提交工单](https://console.cloud.tencent.com/workorder/category)。
 > 
-6. 单击【保持】。
+6. 单击**保持**。
 
