--- a/product/安全服务/凭据管理系统/操作指南/数据库凭据/创建数据库凭据.md
+++ b/product/安全服务/凭据管理系统/操作指南/数据库凭据/创建数据库凭据.md
@@ -4,7 +4,7 @@
 ## 前提条件
 为了能让您更好的使用数据库凭据功能，请提前做好以下准备：
 - [确认已开通KMS服务](https://console.cloud.tencent.com/ssm/cloud)，SSM 基于密钥管理系统 KMS 托管的密钥进行加密。
-- 确保您已经创建云数据库 MySQL 实例。对于具体操作，请查阅 [创建 MySQL 实例](https://cloud.tencent.com/document/product/236/46433)。
+- 确保您已经创建 **云数据库 MySQL** 或 **TDSQL MySQL版** 实例。对于具体操作，请查阅 [创建 MySQL 实例](https://cloud.tencent.com/document/product/236/46433)、[创建 TDSQL 实例](https://cloud.tencent.com/document/product/557/10236)。
 
 ## 操作步骤
 1. 登录  [凭据管理系统](https://console.cloud.tencent.com/ssm)   控制台，在左侧导航栏中，单击【数据库凭据】，进入凭据列表页面。
