--- a/product/计算与网络/CKafka/操作指南/实例管理/公网带宽管理.md
+++ b/product/计算与网络/CKafka/操作指南/实例管理/公网带宽管理.md
@@ -1,10 +1,10 @@
 ## 操作场景
 
-当前 CKafka 默认内网传输，如需通过公网访问，需要单独开通一条公网路由，具体操作参考 [添加路由策略](https://cloud.tencent.com/document/product/597/36348)，当前单台 Broker 默认提供3Mbps 免费公网带宽。
+CKafka 默认内网传输，如需通过公网访问，需要单独开通一条公网路由，具体操作参考 [添加路由策略](https://cloud.tencent.com/document/product/597/36348)，当前单台 Broker 默认提供3Mbps 免费公网带宽。
 
 CKafka 专业版实例支持升配公网带宽，最高可提升至198Mbps，若您有更高的带宽需求，您可以额外支付费用购买。具体价格请参考 [计费概述](https://cloud.tencent.com/document/product/597/11745)。
 
-本文档为您介绍在 CKafka 控制台升配、调整和删除公网带宽的操作步骤。
+本文档为您介绍在 CKafka 控制台升配调整和删除公网带宽的操作步骤。
 
 ## 操作步骤
 
@@ -13,7 +13,7 @@ CKafka 专业版实例支持升配公网带宽，最高可提升至198Mbps，若
 1. 登录 [CKafka 控制台](https://console.cloud.tencent.com/ckafka)。
 2. 在左侧导航栏单击**实例列表**，单击目标实例的“ID/名称”，进入基本信息页。
 3. 在实例基本信息页面，单击接入方式模块中的**添加路由策略**。
-4. 在弹窗中，路由类型选择**公网域名接入**，选择您所需要的公网带宽，单击**提交**，完成购买。
+4. 在弹窗中，路由类型选择**公网域名接入**，选择您所需要的公网带宽大小，单击**提交**，完成购买。
 
 ![](https://main.qcloudimg.com/raw/5e4e665632e7ebd5a78931e87819b5d8.png)
 
