--- a/product/计算与网络/CKafka/操作指南/实例管理/添加路由策略.md
+++ b/product/计算与网络/CKafka/操作指南/实例管理/添加路由策略.md
@@ -39,7 +39,7 @@
 4. 在弹窗中，路由类型选择 **公网域名接入**，选择好接入方式和网络。
 ![](https://main.qcloudimg.com/raw/e61a8b9acfe3d1e5fa71c8cabdbe9965.png)
 5. 单击**提交**，完成公网路由策略添加。
->?CKafka 默认提供3Mbps 免费公网带宽，专业版实例可以额外升配公网带宽，最高可提升至198Mbps。具体操作参考[升配公网带宽]()。
+>?CKafka 默认提供3Mbps 免费公网带宽，专业版实例可以额外升配公网带宽，最高可提升至198Mbps。具体操作参考 [升配公网带宽](https://cloud.tencent.com/document/product/597/61319)。
 
 :::
 </dx-tabs>
