--- a/product/计算与网络/CKafka/购买指南/计费概述.md
+++ b/product/计算与网络/CKafka/购买指南/计费概述.md
@@ -40,7 +40,7 @@
 
 > ? 
 >
-> 2021年09月09日起，CKafka 标准版将不再售卖150MB/s以上带宽规格的实例（容量型和高阶型）。在这之前购买的容量型和高阶型实例仍然可以继续使用，也可以在原来的规格体系里面继续升配，具体操作请参考 [升配实例](https://cloud.tencent.com/document/product/597/40414)。
+> 2021年09月09日起，由于架构优化，CKafka 标准版将不再售卖150MB/s以上带宽规格的实例（容量型和高阶型）。在这之前购买的容量型和高阶型实例仍然可以继续使用，也可以在原来的规格体系里面继续升配，具体操作请参考 [升配实例](https://cloud.tencent.com/document/product/597/40414)。
 
 **单独扩容磁盘价格**
 
