--- a/product/域名与网站/域名注册/域名服务/新网注册域名转入腾讯云.md
+++ b/product/域名与网站/域名注册/域名服务/新网注册域名转入腾讯云.md
@@ -1,5 +1,5 @@
 ## 操作场景
-若您在新网域名注册商注册的域名转入腾讯云 [域名注册控制台](https://console.cloud.tencent.com/) 进行管理，您可参考本文档进行操作。
+若您在新网域名注册商注册的域名转入腾讯云 [域名注册控制台](https://console.cloud.tencent.com/domain/) 进行管理，您可参考本文档进行操作。
 
 ## 操作步骤
 
@@ -14,4 +14,3 @@
 
 ### 转入腾讯云
 获取域名转移密码后，请参见 [新建域名转入](https://cloud.tencent.com/document/product/242/3645#.E6.96.B0.E5.BB.BA.E5.9F.9F.E5.90.8D.E8.BD.AC.E5.85.A5) 操作将域名转入腾讯云。
-
