--- a/product/域名与网站/域名注册/故障处理/域名转入时提示 “该域名状态异常，或因其他原因无法转入”.md
+++ b/product/域名与网站/域名注册/故障处理/域名转入时提示 “该域名状态异常，或因其他原因无法转入”.md
@@ -1,7 +1,7 @@
 
 ## 现象描述
-登录 [域名转入](https://console.cloud.tencent.com/domain/trans-in)，填写并提交域名转入信息时，提示 “该域名状态异常，或其他原因无法转入”。如下图所示：
-![](https://main.qcloudimg.com/raw/c16af83172295791005f52899cf17962.png)
+登录 [域名转入](https://console.cloud.tencent.com/domain/trans-in)，填写并提交域名转入信息时，提示 “该域名包含限制词汇，或因其他原因无法转入”。如下图所示：
+![](https://main.qcloudimg.com/raw/bb2b4b6f0dbb422e150e1cdd09fda003.png)
 
 ## 可能原因
 - 原因1：域名当前状态异常，例如处于 clientHold 状态。
