--- a/product/计算与网络/专线接入/操作指南18-08-27/管理专用通道/专线通道健康检查.md
+++ b/product/计算与网络/专线接入/操作指南18-08-27/管理专用通道/专线通道健康检查.md
@@ -4,7 +4,7 @@
 
 ## 前提条件
 - 在变更通道前，需已 [申请通道](https://cloud.tencent.com/document/product/216/19250)。
-- 专线通道已做主备。
+- 专用通道已做主备。
 
 ## 背景信息
 腾讯云专线接入提供了 BFD 和 NQA 两种专用通道健康检查方法：
