--- a/product/数据库/云数据库 CynosDB/白皮书/安全白皮书/概述.md
+++ b/product/数据库/云数据库 CynosDB/白皮书/安全白皮书/概述.md
@@ -1,12 +1,11 @@
 
 云原生数据库 TDSQL-C（Cloud Native Database TDSQL-C，TDSQL-C）是腾讯云自研的新一代高性能高可用的企业级分布式云数据库。融合了传统数据库、云计算与新硬件技术的优势，100%兼容 MySQL 和 PostgreSQL，实现超百万级 QPS 的高吞吐，128TB 海量分布式智能存储，保障数据安全可靠。
-云原生数据库 TDSQL-C 提供备份、回档、监控、快速扩容、数据传输等数据库运维全套解决方案，为您简化 IT 运维工作，让您能更加专注于业务发展。
 
-云原生数据库 TDSQL-C 提供多样化的安全加固功能，来保证用户数据的可靠性和安全性，为了保障您数据库具备更高的安全能力，建议您根据业务需要配合使用如下安全功能：
-- 网络：[安全组](https://cloud.tencent.com/document/product/236/9537)、[私有网络](https://cloud.tencent.com/document/product/215/20046)。
-- 存储：[数据加密](https://cloud.tencent.com/document/product/236/41101)、[自动备份](https://cloud.tencent.com/document/product/236/35172)。
-- 容灾：[同城容灾](https://cloud.tencent.com/document/product/236/8459)、[异地容灾](https://cloud.tencent.com/document/product/236/7272)。
-- 审计：[合规审计](https://cloud.tencent.com/document/product/1130/49728)。
-- 权限：[访问控制](https://cloud.tencent.com/document/product/236/42034)。
-- 安全：[数据安全](https://cloud.tencent.com/document/product/236/53652)、[数据库巡检](https://cloud.tencent.com/document/product/236/53653)。
+云原生数据库 TDSQL-C（兼容 MySQL 版）提供备份、恢复、监控、快速扩容、数据传输等数据库运维全套解决方案，为您简化 IT 运维工作，让您能更加专注于业务发展。
+
+云原生数据库 TDSQL-C（兼容 MySQL 版）提供多样化的安全加固功能，来保证用户数据的可靠性和安全性，为了保障您数据库具备更高的安全能力，建议您根据业务需要配合使用如下安全功能：
+- 网络：[安全组](https://cloud.tencent.com/document/product/213/12452)、[私有网络](https://cloud.tencent.com/document/product/215/20046)。
+- 存储：[自动备份](https://cloud.tencent.com/document/product/1003/37932)。
+- 权限：[访问控制](https://cloud.tencent.com/document/product/1003/38068)。
+- 安全：[数据库巡检](https://cloud.tencent.com/document/product/236/53653)。
 
