--- a/product/数据库/数据传输服务DTS/最佳实践/双向同步.md
+++ b/product/数据库/数据传输服务DTS/最佳实践/双向同步.md
@@ -14,25 +14,8 @@
 
 ## [各场景推荐配置](id:tjpz)
 双向同步是通过创建两个单向同步任务来构建双向拓扑，每个单向同步的步骤与普通的单向同步的步骤类似，只是在如下同步选项设置有差异。
-<dx-fold-block title="同步选项设置设置差异">
-<img src="https://main.qcloudimg.com/raw/1feadc5ff345d608d9bc48e4dea49c9d.png" style="zoom:60%;" />
-<table>
-<thead><tr><th>设置项</th><th>参数</th><th>描述</th></tr></thead>
-<tbody>
-<tr>
-<td rowspan=2>数据初始化选项</td>
-<td>初始化类型</td>
-<td><ul><li>结构初始化：同步任务执行时会先将源实例中表结构初始化到目标实例中。</li><li>全量数据初始化：同步任务执行时会先将源实例中数据初始化到目标实例中。</li></ul></td></tr>
-<tr>
-<td>已存在同名表</td>
-<td><ul><li>前置校验并报错：存在同名表则报错，流程不再继续。</li><li>忽略并继续执行：全量数据和增量数据直接追加目标实例的表中。</li></ul></td></tr>
-<tr>
-<td rowspan=2>数据同步选项</td>
-<td>冲突处理机制</td>
-<td><ul><li>冲突报错：在同步时发现表主键冲突，报错并暂停数据同步任务。</li><li>冲突忽略：在同步时发现表主键冲突，保留目标库主键记录。<li>冲突覆盖：在同步时发现表主键冲突，用源库主键记录覆盖目标库主键记录。</li></ul></td></tr>
-<tr>
-<td>同步操作类型</td><td>支持操作：Insert、Update、Delete、DDL。<br>双向同步最多支持在一个同步任务中选择 DDL。</td></tr>
-</tbody></table>
+<dx-fold-block title="同步选项设置差异">
+<img src="https://main.qcloudimg.com/raw/8cada47b4964534376b44a9e9d36cee1.png" style="zoom:80%;" />
 </dx-fold-block>
 
 <br>
@@ -55,8 +38,10 @@
 </table>
 
 
-本场景以 MySQL 双向同步（实例 A 有库表结构和数据，实例 B 只有库表结构，无数据）为例进行介绍，其他数据库的双向同步操作类似，请参考本指导进行。
+
 ## 操作步骤
+本场景以 MySQL 双向同步（实例 A 有库表结构和数据，实例 B 只有库表结构，无数据）为例进行介绍，其他数据库的双向同步操作类似，请参考本指导进行。
+
 ### 创建同步任务一：正向同步（实例 A > 实例 B）
 1. 登录 [数据同步购买页](https://buy.cloud.tencent.com/dts)，选择相应配置，单击**立即购买**。
 <table>
