--- a/product/监控与管理/访问控制/用户指南/角色管理/管理角色/修改角色.md
+++ b/product/监控与管理/访问控制/用户指南/角色管理/管理角色/修改角色.md
@@ -3,7 +3,7 @@
 ## 前提条件
 已登录访问管理控制台，进入 [角色](https://console.cloud.tencent.com/cam/role) 列表页面。
 ## 操作步骤
-## 编辑角色关联策略
+### 编辑角色关联策略
 1. 在角色列表页面，单击您要修改的角色名称，进入角色详情页。
 2. 在角色详情页，单击**已授权策略**，进入权限操作栏。
 3. 在权限操作栏，单击**关联策略**。
@@ -11,7 +11,7 @@
 5. 单击**确定**，完成编辑角色关联操作操作。 
 
 
- ## 编辑角色载体
+### 编辑角色载体
 1. 在角色列表页面，单击您要修改的角色名称，进入角色详情页。
 2. 在角色详情页，单击**角色载体**，进入角色载体操作栏。
 3. 单击**管理载体**，进入角色载体设置页面，您可以根据需求修改已下信息： 
