--- a/product/数据库/数据传输服务DTS/最佳实践/双向同步.md
+++ b/product/数据库/数据传输服务DTS/最佳实践/双向同步.md
@@ -12,7 +12,7 @@
 - 双向同步最多仅支持在一个方向进行 DDL，同步链路不能形成环路（正向同步、反向同步只能选择一个进行 DDL）。
 - 目前仅支持 MySQL，云数据库 TDSQL-C（兼容 MySQL 版）或者两者之间创建双向同步任务。
 
-## [各场景推荐配置](id:tjpz)
+## [典型场景推荐配置](id:tjpz)
 双向同步是通过创建两个单向同步任务来构建双向拓扑，每个单向同步的步骤与普通的单向同步的步骤类似，只是在如下同步选项设置有差异。
 <dx-fold-block title="同步选项设置差异">
 <img src="https://main.qcloudimg.com/raw/8cada47b4964534376b44a9e9d36cee1.png" style="zoom:80%;" />
