--- a/product/计算与网络/CKafka/产品动态.md
+++ b/product/计算与网络/CKafka/产品动态.md
@@ -6,10 +6,10 @@
 <th width="15%">发布时间</th>
 <th width="20%">相关文档</th>
 </tr><tr>
-<td>公网流量收费</td>
+<td>支持更高公网带宽</td>
 <td>CKafka 默认提供3Mbps 免费公网带宽，专业版实例可以额外升配公网带宽，最高可提升至198Mbps。</td>
 <td>2021-09-09</td>
-<td><a href="https://cloud.tencent.com/document/product/597/11745">计费概述</a></td>
+<td><a href="https://cloud.tencent.com/document/product/597/61319">公网带宽管理</a></td>
 </tr><tr>
 <td>标准版下线高阶规格</td>
 <td>2021年09月09日起，CKafka 标准版将不再售卖150MB/s以上带宽规格的实例（容量型和高阶型）。在这之前购买的容量型和高阶型实例仍然可以继续使用，也可以在原来的规格体系里面继续升配。</td>
