--- a/product/物联网/物联网智能视频服务（行业版）/产品简介/产品功能.md
+++ b/product/物联网/物联网智能视频服务（行业版）/产品简介/产品功能.md
@@ -29,7 +29,7 @@
 
 ### 运营中心
 
-运营中心支持用户对系统节点资源进行监控和管理，提供运营概览、设备状态变更、设备异常事件和设备告警的查看和检索。
+运营中心支持用户对系统节点资源进行监控和管理，提供运营概览、设备状态变更、设备异常事件和设备告警的查看和检索功能。
 
 
 ### AI 算法仓
