--- a/product/数据库/云数据库 CynosDB/白皮书/安全白皮书/备份恢复.md
+++ b/product/数据库/云数据库 CynosDB/白皮书/安全白皮书/备份恢复.md
@@ -1,7 +1,7 @@
 ### 备份
-云原生数据库 TDSQL-C（兼容 MySQL 版）支持自动备份和手动备份来保障数据可恢复性，进而保证数据的完整性和可靠性。若有其他备份需求，可通过 [控制台](https://console.cloud.tencent.com/cynosdb) 随时发起手动备份。
+云原生数据库 TDSQL-C 支持自动备份和手动备份来保障数据可恢复性，进而保证数据的完整性和可靠性。若有其他备份需求，可通过 [控制台](https://console.cloud.tencent.com/cynosdb) 随时发起手动备份。
 
 
 ### 恢复
-云原生数据库 TDSQL-C（兼容 MySQL 版）提供恢复数据的能力，您可根据业务需要通过克隆功能进行数据恢复，支持数据恢复到备份保留期内的任意时间点。
+云原生数据库 TDSQL-C 提供恢复数据的能力，您可根据业务需要通过克隆功能进行数据恢复，支持数据恢复到备份保留期内的任意时间点。
 
