--- a/product/企业应用/腾讯电子签 SaaS 版/接入指引/企业组织架构管理.md
+++ b/product/企业应用/腾讯电子签 SaaS 版/接入指引/企业组织架构管理.md
@@ -32,24 +32,19 @@
 <dx-tabs>
 ::: 手动添加
 1. 选中左侧的部门，单击**新增员工**进入手动添加页面。
-
 ![image-20210622151052533](https://main.qcloudimg.com/raw/d77dceea07de33c4d89c86a2fe28fc20.png)
 
-2. 输入企业员工的姓名、手机号码，选择该员工的角色（如无角色需先在角色管理中创建），单击**保存**按钮即可完成员工的新增。您也可以单击输入框下方的**新增员工**，一次新增多位员工。
-
+2. 输入企业员工的姓名、手机号码，选择该员工的角色（如无角色可参见 [角色管理](链接) 文档创建），单击**保存**即可完成员工的新增。您也可以单击输入框下方的 **新增员工**，一次新增多位员工。
 ![image-20210621185108254](https://main.qcloudimg.com/raw/105a0f26d125476d0a97d550a98aaf9c.png)
 :::
 ::: 批量导入
 1. 在新增员工界面单击tab切换到表格导入，下载架构导入模板。
-
 ![image-20210622110831705](https://main.qcloudimg.com/raw/33ecb2004757ce34c5a683b7b671a463.png)
 
 2. 按照模板填写新增员工的个人信息，然后单击**上传**>**导入**完成新增。
-
 ![image-20210622111718906](https://main.qcloudimg.com/raw/0919aa334a21fee961ec85f9a6916f13.png)
 
 3. 批量导入的员工未关联任何角色，登录后将无任何操作权限。您可单击**编辑角色**为员工分配角色。
-
 ![image-20210622113453090](https://main.qcloudimg.com/raw/baf316ce6bf8fdedf3d5e10636b1fa2b.png)
 :::
 </dx-tabs>
