--- a/product/计算与网络/专线接入/操作指南18-08-27/管理专用通道/专线通道健康检查.md
+++ b/product/计算与网络/专线接入/操作指南18-08-27/管理专用通道/专线通道健康检查.md
@@ -8,11 +8,9 @@
 
 ## 背景信息
 腾讯云专线接入提供了 BFD 和 NQA 两种专用通道健康检查方法：
-- BFD：在网络设备间建立会话，用来检测网络设备间的双向转发路径。建立会话后周期性发送报文，如果检测时间内没有收到报文则认为该路径故障，将检测结果反馈给其所服务的应用。目前仅支持 BFD 和 BPG 联动。
+- BFD：在网络设备间建立会话，用来检测网络设备间的双向转发路径。建立会话后周期性发送报文，如果检测时间内没有收到报文则认为该路径故障，将检测结果反馈给其所服务的应用。目前 BFD 支持 BGP 和静态两种路由模式联动。
 ![](https://main.qcloudimg.com/raw/57114349477e73bfcb03d69629310334.png)
-- NQA：通过发送测试报文，对网络性能或服务质量进行分析，为用户提供网络性能参数，如时延抖动、HTTP 总时延、通过 DHCP 获取 IP 地址的时延、TCP 连接时延、FTP 连接时延和文件传输速率等。适用如下场景：
-  - 实时了解网络性能。
-  - 快速定位网络故障。
+- NQA：通过 Ping 探测专用通道是否存活，协助您实时了解通道健壮性和故障快速定位。
 
 ## 通道健康检查
 1. 登录 [专线接入控制台](https://console.cloud.tencent.com/dc/conn)，在左侧导航栏单击**专用通道**。
@@ -26,17 +24,17 @@
 <tr>
 <th>健康检查配置参数</th>
 <th>含义</th>
-<th>默认值</th>
+<th>取值</th>
 </tr>
 <tr>
 <td>健康检查间隔</td>
 <td>两次健康检查间隔时间。</td>
-<td><ul><li>BFD：1000ms</li><li>NQA：2000ms</li></ul></td>
+<td><ul><li>BFD：1000ms - 3000ms，默认值1000ms。</li><li>NQA：1000ms - 5000ms，默认值2000ms。</li></ul></td>
 </tr>
 <tr>
 <td>健康检查次数</td>
 <td>如果连续执行设定次数的健康检查失败后，则执行路由切换。</td>
-<td><ul><li>BFD：3次</li><li>NQA：5次</li></ul></td>
+<td><ul><li>BFD：3 - 8，默认值3。</li><li>NQA：3 - 8，默认值5。</li></ul></td>
 </tr>
 </table>
 >? 
