--- a/product/数据库/云数据库 CynosDB/白皮书/安全白皮书/备份恢复.md
+++ b/product/数据库/云数据库 CynosDB/白皮书/安全白皮书/备份恢复.md
@@ -1,7 +1,14 @@
 ### 备份
-云原生数据库 TDSQL-C 支持自动备份和手动备份来保障数据可恢复性，进而保证数据的完整性和可靠性。若有其他备份需求，可通过 [控制台](https://console.cloud.tencent.com/cynosdb) 随时发起手动备份。
+云原生数据库 TDSQL-C 支持自动备份和手动备份来保障数据可恢复性，进而保证数据的完整性和可靠性。若有其他备份需求，可通过控制台随时发起手动备份。
 
+功能使用请参见 [备份数据](https://cloud.tencent.com/document/product/1003/37932)。
 
-### 恢复
-云原生数据库 TDSQL-C 提供恢复数据的能力，您可根据业务需要通过克隆功能进行数据恢复，支持数据恢复到备份保留期内的任意时间点。
+### 回档
+云原生数据库 TDSQL-C 支持库表级别回档，您可根据业务需要通过回档功能进行数据恢复，支持数据恢复到备份保留期内的任意时间点。
 
+功能使用请参见 [回档数据](https://cloud.tencent.com/document/product/1003/53305)。
+
+### 克隆
+云原生数据库 TDSQL-C 支持整集群级别回档（克隆）到新集群，通过克隆将集群恢复到日志备份保留时间内的任意时间点，或者恢复到指定备份文件的备份集。
+
+功能使用请参见 [克隆集群](https://cloud.tencent.com/document/product/1003/53306)。
