--- a/product/数据库/云数据库 CynosDB/白皮书/安全白皮书/访问控制.md
+++ b/product/数据库/云数据库 CynosDB/白皮书/安全白皮书/访问控制.md
@@ -1,11 +1,11 @@
 
-云原生数据库 TDSQL-C（兼容 MySQL 版） 通过数据库帐号管理、密码管理、访问管理、安全组等维度进行访问控制，进而保障 TDSQL-C 的数据安全性。
+云原生数据库 TDSQL-C 通过数据库帐号管理、密码管理、访问管理、安全组等维度进行访问控制，进而保障 TDSQL-C 的数据安全性。
 
 ### 数据库帐号管理
-云原生数据库 TDSQL-C（兼容 MySQL 版）支持通过 [控制台](https://console.cloud.tencent.com/cynosdb) 创建数据库帐号，还可以为其数据库帐号授予不同粒度的管理权限，建议您采用权限最小化的授权原则，进而保证数据库的数据安全。
+云原生数据库 TDSQL-C 支持通过 [控制台](https://console.cloud.tencent.com/cynosdb) 创建数据库帐号，还可以为其数据库帐号授予不同粒度的管理权限，建议您采用权限最小化的授权原则，进而保证数据库的数据安全。
 
 ### 密码管理
-云原生数据库 TDSQL-C（兼容 MySQL 版）支持通过控制台重置数据库帐号密码，数据库密码规格需要8 - 64个字符，至少包含英文、数字和符号 `_+-&=!@#$%^*()` 中的2种。
+云原生数据库 TDSQL-C 支持通过控制台重置数据库帐号密码，数据库密码规格需要8 - 64个字符，至少包含英文、数字和符号 `_+-&=!@#$%^*()` 中的2种。
 重置密码功能已纳入 [访问管理 CAM](https://cloud.tencent.com/document/product/598/10583) 权限管理，建议对重置密码接口或 TDSQL-C 敏感资源权限收紧，只授权给应该授权的人员。为了数据安全，建议您定期更换密码，最长间隔不超过3个月。
 
 ### 访问管理
