--- a/product/计算与网络/专线接入/操作指南18-08-27/管理专用通道/专线通道健康检查.md
+++ b/product/计算与网络/专线接入/操作指南18-08-27/管理专用通道/专线通道健康检查.md
@@ -22,9 +22,9 @@
 ![](https://main.qcloudimg.com/raw/96f3e604e987562ead4c9e7b21817a70.png)
 <table>
 <tr>
-<th>健康检查配置参数</th>
-<th>含义</th>
-<th>取值范围</th>
+<th width="20%">健康检查配置参数</th>
+<th width="30%">含义</th>
+<th width="50%">取值范围</th>
 </tr>
 <tr>
 <td>健康检查间隔</td>
