--- a/product/存储与CDN/对象存储 4.0/控制台管理V5/数据处理/设置图片审核.md
+++ b/product/存储与CDN/对象存储 4.0/控制台管理V5/数据处理/设置图片审核.md
@@ -114,6 +114,6 @@ HTTP 包信息如下表：
 ## 相关说明
 
 1. 图片审核为打分制，对于每一张图片均有一个0 - 100的分值。
-2、**确定部分**指确定是敏感图片和确定正常的图片，分值在[0,60]和(90,100]区间，我们认为图片置信度比较明确，无需进行人工干预。
-3、**不确定部分**指疑似敏感图片，机审无法区分是否为敏感内容，分值在(60,90]区间，建议用户通过人工审核的方式确定。
+2. **确定部分**指确定是敏感图片和确定正常的图片，分值在[0,60]和(90,100]区间，我们认为图片置信度比较明确，无需进行人工干预。
+3. **不确定部分**指疑似敏感图片，机审无法区分是否为敏感内容，分值在(60,90]区间，建议用户通过人工审核的方式确定。
 
