--- a/product/数据库/数据传输服务DTS/最佳实践/多对一同步.md
+++ b/product/数据库/数据传输服务DTS/最佳实践/多对一同步.md
@@ -24,32 +24,14 @@
    - 其他类型的多对一同步（如多张不同名称的表合并到一个库），可以在每个任务中选择 DDL，请用户根据实际情况选择合适的 DDL 同步策略。
 - 在校验阶段，同步系统会结合当前用户的所有其他同步任务，判断正在新建的同步任务是否会造成 DDL 循环或者冲突，并给出提示供用户参考。 
 
-## 操作步骤
 
-#### [各场景推荐配置](id:tjpz)
-
+## [典型场景推荐配置](id:tjpz)
 多对一同步是通过创建多个单向同步任务来构建多对一拓扑，每个单向同步的步骤与普通的单向同步的步骤类似，只是在如下同步选项设置有差异。
-<img src="https://main.qcloudimg.com/raw/1feadc5ff345d608d9bc48e4dea49c9d.png" style="zoom:60%;" />
+<dx-fold-block title="同步选项设置差异">
+<img src="https://main.qcloudimg.com/raw/8cada47b4964534376b44a9e9d36cee1.png" style="zoom:80%;" />
+</dx-fold-block>
 
-<table>
-<thead><tr><th>设置项</th><th>参数</th><th>描述</th></tr></thead>
-<tbody>
-<tr>
-<td rowspan=2>数据初始化选项</td>
-<td>初始化类型</td>
-    <td><ul><li>结构初始化：同步任务执行时会先将源实例中表结构初始化到目标实例中。</li><li>全量数据初始化：同步任务执行时会先将源实例中数据初始化到目标实例中。</li></ul></td></tr>
-<tr>
-<td>已存在同名表</td>
-<td><ul><li>前置校验并报错：存在同名表则报错，流程不再继续。</li><li>忽略并继续执行：全量数据和增量数据直接追加目标实例的表中。</li></ul></td></tr>
-<tr>
-<td rowspan=2>数据同步选项</td>
-<td>冲突处理机制</td>
-<td><ul><li>冲突报错：在同步时发现表主键冲突，报错并暂停数据同步任务。</li><li>冲突忽略：在同步时发现表主键冲突，保留目标库主键记录。<li>冲突覆盖：在同步时发现表主键冲突，用源库主键记录覆盖目标库主键记录。</li></ul></td></tr>
-<tr>
-<td>同步操作类型</td><td>支持操作：Insert、Update、Delete、DDL。<br>双向同步最多支持在一个同步任务中选择 DDL。</td></tr>
-</tbody></table>
-
-如下列出了典型场景的推荐配置，请用户参考操作。
+<br>如下列出了典型场景的推荐配置，请用户参考操作。
 
 示例：构建实例 A、B 到 C 的同步，且实例 A、B 中有相同名称的表需要同步到实例 C，任务一 A > C 同步，任务二 B > C 同步。如有更多的源端需要同步到目的端，参考任务二增加同步任务即可。
 
@@ -69,10 +51,10 @@
 <td>任务二</td><td>同任务一</td><td>同任务一</td></tr>   
 </table>
 
+## 操作步骤
 如下以 MySQL 二对一同步（实例 A、B 有库表和数据，实例 C 为空）为例进行介绍，其他数据库的多对一同步操作类似，请参考本指导进行。
 
-#### 创建同步任务一（实例 A > 实例 C）
-
+### 创建同步任务一（实例 A > 实例 C）
 1. 登录 [数据同步购买页](https://buy.cloud.tencent.com/dts)，选择相应配置，单击**立即购买**。
 <table>
 <thead><tr><th>参数</th><th>描述</th></tr></thead>
@@ -161,7 +143,7 @@
 7. 返回数据同步任务列表，任务开始进入**运行中**状态。
 ![](https://main.qcloudimg.com/raw/e1bef3285d4786a3f77b69010d32d181.png)
 
-#### 创建同步任务二（实例 B > 实例 C）
+### 创建同步任务二（实例 B > 实例 C）
 等到上一个同步任务进行到**同步增量**阶段后，再配置同步任务二。
 ![](https://main.qcloudimg.com/raw/f94d45233fb17488cf1106701b6e53bc.png)
 同步任务二和同步任务一操作基本一致，以下仅对差异点进行详细说明。
@@ -175,6 +157,6 @@
   - 同步操作类型：不选择 DDL。多对一同步仅支持在一个同步任务选择 DDL。本场景中在任务一中选择 DDL，其他任务中不选择。
 ![](https://main.qcloudimg.com/raw/74feffa8be9e790e8f1f183d5990fc8c.png)
 
-#### 结束同步任务
+### 结束同步任务
 如不需要同步任务，可选择**操作**列的**更多** > **结束**，关闭同步任务。
 
