--- a/product/存储与CDN/对象存储 4.0/SDK文档/.NET SDK/向下兼容指南.md
+++ b/product/存储与CDN/对象存储 4.0/SDK文档/.NET SDK/向下兼容指南.md
@@ -1,6 +1,6 @@
 ## 描述
 
-C# SDK 从 5.4.23 版本开始，提供 .NET Framework 4.0 及以下版本的兼容性。
+.NET SDK 从 5.4.23 版本开始，提供 .NET Framework 4.0 及以下版本的兼容性。
 
 具体表现为，增加 COSXML-Compatible.dll 库的方式，能够实现在 .NET Framework 4.0 及以下版本应用中运行。
 
@@ -17,16 +17,16 @@ C# SDK 从 5.4.23 版本开始，提供 .NET Framework 4.0 及以下版本的兼
 2.  在 Visual Studio 项目中选择 
 
 ```
-项目 -> 添加引用 -> 浏览 -> COSXML-Compatible.dll 的方式添加C# SDK
+项目 -> 添加引用 -> 浏览 -> COSXML-Compatible.dll 的方式添加 .NET SDK
 ```
 
 ## 使用方式
 
-与通用版 C# SDK 基本相同，需要关注如下两点：
+与通用版 .NET SDK 基本相同，需要关注如下两点：
 
 1. .NET Framework 4.0 及以下环境通过 https 访问COS可能存在问题，如因设置开启 https 导致请求失败，可关闭 https 后重试；
 
-2. C# 兼容版中不包含高级接口的支持，请使用其他接口访问COS，具体不兼容接口如下；
+2. .NET 兼容版中不包含高级接口的支持，请使用其他接口访问COS，具体不兼容接口如下；
 
 ### 不支持的接口范围
 
