--- a/product/存储与CDN/对象存储 4.0/SDK文档/.NET SDK/快速入门.md
+++ b/product/存储与CDN/对象存储 4.0/SDK文档/.NET SDK/快速入门.md
@@ -45,7 +45,7 @@ dotnet add package Tencent.QCloud.Cos.Sdk
 项目 -> 添加引用 -> 浏览 -> COSXML-Compatible.dll 的方式添加C# SDK
 ```
 
-关于C# SDK的向下兼容特性，参见 [向下兼容指南](向下兼容指南.md)
+关于.NET SDK的向下兼容特性，参见 [向下兼容指南](向下兼容指南.md)
 
 您也可以在 [Releases 里面](https://github.com/tencentyun/qcloud-sdk-dotnet/releases) 手动下载我们的SDK。
 
