--- a/product/存储与CDN/对象存储 4.0/SDK文档/.NET SDK/对象操作/下载对象.md
+++ b/product/存储与CDN/对象存储 4.0/SDK文档/.NET SDK/对象操作/下载对象.md
@@ -17,7 +17,7 @@ SDK 所有接口的具体参数与方法说明，请参考 [SDK API](https://cos
 高级接口支持暂停、恢复以及取消下载请求，同时支持断点下载功能。
 
 >?
-> - .NET Framework 4.0 及以下的用户，高级接口暂不可用，详见[[向下兼容指南](向下兼容指南.md)
+> - .NET Framework 4.0 及以下的用户，高级接口暂不可用，详见[向下兼容指南](向下兼容指南.md)
 > 
 
 #### 示例代码一: 下载对象
