--- a/product/安全服务/身份安全/多因子验证/产品简介/产品概述.md
+++ b/product/安全服务/身份安全/多因子验证/产品简介/产品概述.md
@@ -1,8 +1,8 @@
-腾讯安全多因子身份认证服务（Multi-Factor Authentication Service，以下简称为：MFAS）是一套多层次的身份安全防御体系，通过结合两种或三种独立不相干的认证因素（知识认证因素、拥有认证因素、固有认证因素）来验证访问者的身份，使系统或资源更加安全。攻击者即使破解单一认证因素（例如：口令、人脸），应用的安全依然可以得到保障。
+腾讯安全多因子身份认证服务（Multi-Factor Authentication Service，以下简称为：MFAS）是一套多层次的身份安全防御体系，通过结合两种或三种独立不相干的认证因子（知识认证因子、拥有认证因子、固有认证因子）来验证访问者的身份，使系统或资源更加安全。攻击者即使破解单一认证因子（例如：口令、人脸），应用的安全依然可以得到保障。
 >?
->- 知识认证因素：用户知道的某些知识，例如：密码、PIN 码、安全保护问题等。
->- 拥有认证因素：用户拥有的某些物理对象，例如：硬件令牌、身份证、手机号码等。
->- 固有认证因素：用户具有的某些物理特征，例如：指纹、虹膜、声音、笔迹、行为特征等。
+>- 知识认证因子：用户知道的某些知识，例如：密码、PIN 码、安全保护问题等。
+>- 拥有认证因子：用户拥有的某些物理对象，例如：硬件令牌、身份证、手机号码等。
+>- 固有认证因子：用户具有的某些物理特征，例如：指纹、虹膜、声音、笔迹、行为特征等。
 
 
 ## 产品功能
