--- a/product/企业应用/腾讯电子签 SaaS 版/快速入门.md
+++ b/product/企业应用/腾讯电子签 SaaS 版/快速入门.md
@@ -16,13 +16,13 @@
 
 ## 第 4 步：使用服务
 
-在完成以上步骤后，您即可在现网环境参考如下操作指南文档使用腾讯电子签服务。
+在完成以上步骤后，您可参见如下操作指南使用腾讯电子签服务。
 
-- [创建角色]()
-- [新增员工]()
-- [配置印章]()
-- [合同管理]()
-- [模板管理]()
+- [创建角色](https://cloud.tencent.com/document/product/1323/61355)
+- [新增员工](https://cloud.tencent.com/document/product/1323/58495)
+- [配置印章](https://cloud.tencent.com/document/product/1323/59451)
+- [合同管理](https://cloud.tencent.com/document/product/1323/61360)
+- [模板管理](https://cloud.tencent.com/document/product/1323/61357)
 
 ## 联系我们
 
