--- a/product/企业应用/腾讯电子签 SaaS 版/接入指引/企业组织架构管理.md
+++ b/product/企业应用/腾讯电子签 SaaS 版/接入指引/企业组织架构管理.md
@@ -34,7 +34,7 @@
 1. 选中左侧的部门，单击**新增员工**进入手动添加页面。
 ![image-20210622151052533](https://main.qcloudimg.com/raw/d77dceea07de33c4d89c86a2fe28fc20.png)
 
-2. 输入企业员工的姓名、手机号码，选择该员工的角色（如无角色可参见 [角色管理](链接) 文档创建），单击**保存**即可完成员工的新增。您也可以单击输入框下方的 **新增员工**，一次新增多位员工。
+2. 输入企业员工的姓名、手机号码，选择该员工的角色（如无角色可参见 [角色管理](https://cloud.tencent.com/document/product/1323/61355) 文档创建），单击**保存**即可完成员工的新增。您也可以单击输入框下方的 **新增员工**，一次新增多位员工。
 ![image-20210621185108254](https://main.qcloudimg.com/raw/105a0f26d125476d0a97d550a98aaf9c.png)
 :::
 ::: 批量导入
