--- a/product/企业应用/腾讯电子签 SaaS 版/操作指南/印章管理.md
+++ b/product/企业应用/腾讯电子签 SaaS 版/操作指南/印章管理.md
@@ -3,7 +3,7 @@
 ## 前提条件
 
 1. 企业需要先进行 [企业账号激活](https://cloud.tencent.com/document/product/1323/58492) 流程，并且完成 [法人授权流程](https://cloud.tencent.com/document/product/1323/58494) 及 [超管激活流程](https://cloud.tencent.com/document/product/1323/58493)。
-2. 创建角色 并 按照组织架构管理 完成企业员工的创建与激活。
+2. [创建角色](https://cloud.tencent.com/document/product/1323/61355) 并按照 [组织架构管理](https://cloud.tencent.com/document/product/1323/58495) 完成企业员工的创建与激活。
 
 ## 操作步骤
 
