--- a/product/企业应用/腾讯电子签 SaaS 版/接入指引/企业账号激活.md
+++ b/product/企业应用/腾讯电子签 SaaS 版/接入指引/企业账号激活.md
@@ -72,11 +72,11 @@
 
 ### 步骤5：使用腾讯电子签服务
 完成激活流程后，您可参见如下操作指南文档使用腾讯电子签服务。
-- 创建角色
-- 新增员工
-- 配置印章
-- 发起合同
-- 创建模板
+- [创建角色](https://cloud.tencent.com/document/product/1323/61355)
+- [新增员工](https://cloud.tencent.com/document/product/1323/58495)
+- [配置印章](https://cloud.tencent.com/document/product/1323/59451)
+- [发起合同](https://cloud.tencent.com/document/product/1323/61360)
+- [创建模板](https://cloud.tencent.com/document/product/1323/61357)
 ## 联系我们
 
 如您按照文档进行操作的过程中遇到问题，您可通过 e-contract@tencent.com 联系我们，我们将竭诚为您服务！
