--- a/product/数据库/数据库审计/产品动态.md
+++ b/product/数据库/数据库审计/产品动态.md
@@ -10,6 +10,15 @@
 <td>增加实例名展示</td>
 <td>实例列表原“实例ID”列变更为“实例 ID / 名称”列，新增实例名称显示，便于快速定位实例。</td>
 <td>2021-08</td><td>-</td></tr>
+<tr>
+<td>日志保留时长支持7天</td>
+<td>新开通审计能力时可以设置日志保留时长为7天，满足用于发现数据库问题时，希望短期观察运行概况并分析问题的场景。同时，已经开通审计能力的实例也支持修日志保留时长至7天。</td>
+<td>2021-08</td><td><a href="https://cloud.tencent.com/document/product/672/61305" target="_blank">修改日志保存时长</a></td></tr>
+<tr>
+<td>搜索优化</td>
+<td>支持模糊搜索、支持多 SQL 类型同时作为条件进行过滤、搜索时间段解除24小时限制。</td>
+<td>2021-08</td><td><a href="https://cloud.tencent.com/document/product/672/61284" target="_blank">查看审计日志</a></td></tr>
+<tr>
 <td>支持 MongoDB 审计</td>
 <td>腾讯云为云数据库 MongoDB提供数据库审计能力，记录对数据库的访问及 SQL 语句执行情况，帮助企业进行风险控制，提高数据安全等级。</td>
 <td>2021-08</td><td><a href="https://cloud.tencent.com/document/product/672/61273" target="_blank">开通云数据库 MongoDB 审计</a></td></tr>
