--- a/product/数据库/数据传输服务DTS/最佳实践/使用数据同步构建多活数据中心.md
+++ b/product/数据库/数据传输服务DTS/最佳实践/使用数据同步构建多活数据中心.md
@@ -54,4 +54,4 @@
 </table>
 
 ## 操作步骤
-具体操作可参考 [操作步骤](https://cloud.tencent.com/document/product/571/60956#.E6.93.8D.E4.BD.9C.E6.AD.A5.E9.AA.A4)。
+构建多活数据中心即创建多个双向同步，详细步骤请参考 [构建双向同步数据结构](https://cloud.tencent.com/document/product/571/60956#.E6.93.8D.E4.BD.9C.E6.AD.A5.E9.AA.A4)。
