未知问题提issue

--- a/product/存储与CDN/对象存储 4.0/SDK文档/.NET SDK/向下兼容指南.md
+++ b/product/存储与CDN/对象存储 4.0/SDK文档/.NET SDK/向下兼容指南.md
@@ -4,9 +4,9 @@
 
 具体表现为，增加 COSXML-Compatible.dll 库的方式，能够实现在 .NET Framework 4.0 及以下版本应用中运行。
 
-需要注意，兼容的环境可能不支持 NuGet 方式集成，具体集成方式见“添加引用”
+需要注意，兼容的环境可能不支持 NuGet 方式集成，具体集成方式见“添加引用”。
 
-同时需要注意，所有高级接口（高级上传、断点续传下载等）在 COSXML-Compatible.dll 均不可用，同时不支持 C# 语言的 await、async、Task等语言特性
+同时需要注意，所有高级接口（高级上传、断点续传下载等）在 COSXML-Compatible.dll 均不可用。
 
 ## 添加引用
 
@@ -40,4 +40,4 @@
 
 ## 未知问题
 
-目前兼容包处于预发布阶段，如存在其他未列出的使用问题，请 [联系我们](https://cloud.tencent.com/document/product/436/37708) 
+目前兼容包处于预发布阶段，如存在其他未列出的使用问题，请向GitHub项目提issue [issue](https://github.com/tencentyun/qcloud-sdk-dotnet/issues) 
