--- a/product/监控与管理/应用性能观测/快速入门.md
+++ b/product/监控与管理/应用性能观测/快速入门.md
@@ -5,7 +5,7 @@
 
 ## 步骤2：创建业务系统[](id:step2)
 1. 进入应用性能观测控制台 [**资源管理**](https://console.cloud.tencent.com/apm/monitor/team)。
-2. 单击**新建**，在新建弹框中填写业务系统名称并选择存储时长，完成后单击【确定】即可。
+2. 单击**新建**，在新建弹框中填写业务系统名称并选择存储时长，完成后单击**确定**即可。
 ![](https://main.qcloudimg.com/raw/14a0f153ec8d7c2b3fbe4b1a9d5c4a99.png)
 
 ## 步骤3：接入应用[](id:step3)
