--- a/product/安全服务/身份安全/多因子验证/购买指南/计费概述.md
+++ b/product/安全服务/身份安全/多因子验证/购买指南/计费概述.md
@@ -3,22 +3,15 @@
 - 如果您需要申请 MFAS 试用，或了解我们私有化方案，可通过 [申请试用](https://cloud.tencent.com/apply/p/h6yib8x1nce) 提交需求，我们将安排专人与您对接沟通。
 
 ## 计费方式
+
 <table>
-<thead>
-<tr>
-<th><strong>服务与产品</strong></th>
-<th><strong>服务类型</strong></th>
-<th><strong>令牌上限</strong></th>
-<th><strong>刊例价（单位：元/租户/月）</strong></th>
-<th><strong>计费模式</strong></th>
-</tr>
-</thead>
+<tr><th width=20%><strong>服务与产品</strong></th><th width=8%><strong>服务类型</strong></th><th width=20%><strong>令牌上限</strong></th><th width=25%><strong>刊例价（单位：元/租户/月）</strong></th><th width=20%><strong>计费模式</strong></th></tr>
 <tbody><tr>
-<td  rowspan=6 >MFAS</td>
+<td  rowspan=5 >MFAS</td>
 <td>T300</td>
 <td>300 个移动令牌</td>
 <td>2000元/租户/月</td>
-<td  rowspan=6 >申请订阅时，按令牌量级选择订阅套餐，套餐按月收费。</td>
+<td  rowspan=5 >申请订阅时，按令牌量级选择订阅套餐，套餐按月收费。</td>
 </tr>
 <tr>
 <td>T500</td>
@@ -39,11 +32,6 @@
 <td>T10000</td>
 <td>10000个移动令牌</td>
 <td>24000元/租户/月</td>
-</tr>
-<tr>
-<td>T100000</td>
-<td>100000个移动令牌</td>
-<td>170000元/租户/月</td>
 </tr>
 <tr>
 <td>MFAS 试用</td>
