--- a/product/企业应用/腾讯电子签 SaaS 版/操作指南/合同管理/发起合同.md
+++ b/product/企业应用/腾讯电子签 SaaS 版/操作指南/合同管理/发起合同.md
@@ -21,7 +21,7 @@
 1. 进入**合同管理** 点击**发起合同**按钮。
 ![image-20210906161735167](https://main.qcloudimg.com/raw/320cc971b7c39e71b268abb701edc466.png)
 
-2. 您可选择上传本地合同或选择合同模板（合同模板您可参考[模板管理](链接到模板管理文档)文档进行创建），本指引以上传本地合同为例，上传成功后点击**下一步**。
+2. 您可选择上传本地合同或选择合同模板（合同模板您可参见 [模板管理](https://cloud.tencent.com/document/product/1323/61357) 进行创建），本指引以上传本地合同为例，上传成功后点击**下一步**。
 ![image-20210906162052025](https://main.qcloudimg.com/raw/6d8d8265c0d1415f38e6f29fce1c6f62.png)
 
 ### 步骤3. 配置签约信息
@@ -53,6 +53,6 @@
 合同发起成功，您可点击**另存为模板**将此合同保存为合同模板。签署双方可在腾讯电子签小程序查看并签署合同。
 ![image-20210906173833592](https://main.qcloudimg.com/raw/eedb6ae3522e17fd7b6a601c1d709ea8.png)
 
-您可在合同列表中查看合同签署状态，或点击**生成合同二维码**将二维码保存发送给签署方，加快签约进度。签署可参考[签署合同](链接到签署合同文档)指引文档。
+您可在合同列表中查看合同签署状态，或点击**生成合同二维码**将二维码保存发送给签署方，加快签约进度。签署可参见 [签署合同](https://cloud.tencent.com/document/product/1323/61361) 指引文档。
 ![image-20210906174410052](https://main.qcloudimg.com/raw/7f345a20f197646e917720c186ead97a.png)
 
