--- a/product/企业应用/腾讯电子签 SaaS 版/操作指南/角色管理.md
+++ b/product/企业应用/腾讯电子签 SaaS 版/操作指南/角色管理.md
@@ -1,4 +1,4 @@
-角色关联腾讯电子签控制台各个模块权限，超级管理员可通过为企业员工分配角色实现权限管控。本文档指导您如何在控制台进行角色的创建. 编辑. 删除等操作。
+角色关联腾讯电子签控制台各个模块权限，超级管理员可通过为企业员工分配角色实现权限管控。本文档指导您如何在控制台进行角色的创建、编辑、删除等操作。
 
 ## 前提条件
 
