--- a/product/视频服务/实时音视频/最佳实践/实现云端录制和回放.md
+++ b/product/视频服务/实时音视频/最佳实践/实现云端录制和回放.md
@@ -289,6 +289,7 @@ https://vod.tencentcloudapi.com/?Action=SearchMedia
 <td>录制文件的观看地址，可以用于 <a href="#play">点播回放</a>。</td>
 </tr></table>
 
+>? 更多回调字段说明，请参见 [云直播-录制事件通知](https://cloud.tencent.com/document/product/267/47026#message)。
 
 
 [](id:delete)
