--- a/product/计算与网络/私有网络2018-09-13/公告/私有网络部分接口鉴权升级公告.md
+++ b/product/计算与网络/私有网络2018-09-13/公告/私有网络部分接口鉴权升级公告.md
@@ -1,5 +1,4 @@
-﻿# 私有网络部分接口鉴权升级公告
-私有网络 VPC 于北京时间2021年9月14日对CreateDefaultVpc接口的鉴权功能进行升级优化。升级后，子用户调用该接口需向主账号[ 申请 CAM 策略授权](#cam)，否则可能调用失败。
+私有网络 VPC 于北京时间2021年9月14日对 CreateDefaultVpc 接口的鉴权功能进行升级优化。升级后，子用户调用该接口需向主账号[ 申请 CAM 策略授权](#cam)，否则可能调用失败。
 
 ## 升级的接口列表
 <table>
@@ -10,15 +9,14 @@
 
 ## 为子账号配置策略授权[](id:cam)
 如果子用户已关联预设策略 QcloudVPCFullAccess，且调用 CreateDefaultVpc 接口成功，则无需执行本操作。当子用户调用升级后的 CreateDefaultVpc 接口失败时，您可通过以下操作为子用户完成策略授权。
-
 1. 登录 [访问管理控制台](https://console.cloud.tencent.com/cam/overview)。
-2. 在左侧导航栏，单击“策略”。
-3. 在策略管理界面的搜索框中，搜索找到 QcloudVPCFullAccess 策略，该策略为VPC下全读写访问权限。
-    ![](https://main.qcloudimg.com/raw/b3d7232609a4ea4fe5220bb5cb4c9eb8.png)
-4. 单击右侧“操作”列的“关联用户/组”。
-5. [](id:step4)在弹出的“关联用户/用户组”对话框中，单击左侧列表的目标用户项，将其添加至右侧的“已选择”列表中，单击“确定”。
+2. 在左侧导航栏，单击**策略**。
+3. 在策略管理界面的搜索框中，搜索找到 QcloudVPCFullAccess 策略，该策略为 VPC 下全读写访问权限。
+ ![](https://main.qcloudimg.com/raw/b3d7232609a4ea4fe5220bb5cb4c9eb8.png)
+4. 单击右侧**操作**列的**关联用户/组**。
+5. [](id:step4)在弹出的“关联用户/用户组”对话框中，单击左侧列表的目标用户项，将其添加至右侧的“已选择”列表中，单击**确定**。
 ![](https://main.qcloudimg.com/raw/a10c35e5a71ef2792b1f338441017a8a.png)
-6. （可选）若需关联用户组，则在“关联用户/用户组”对话框，单击【切换成用户组】＞【用户组】，重复<a href="#step4"> 步骤5</a> 即可。
+6. （可选）若需关联用户组，则在“关联用户/用户组”对话框，单击**切换成用户组** ＞ **用户组**，重复<a href="#step4"> 步骤5</a> 即可。
    ![](https://main.qcloudimg.com/raw/eb74742271b5d4cfed844e6e1914dbea.png)
 
 
