--- a/api/存储与CDN/对象存储（XML API）/API 文档(6.28)/图片处理/质量变换.md
+++ b/api/存储与CDN/对象存储（XML API）/API 文档(6.28)/图片处理/质量变换.md
@@ -1,6 +1,6 @@
 ## 功能概述
 
-COS 通过数据万象 **imageMogr2** 接口对图片质量进行调节。
+对象存储通过数据万象 **imageMogr2** 接口对图片质量进行调节。
 
 该功能支持以下处理方式：
 
@@ -10,7 +10,9 @@ COS 通过数据万象 **imageMogr2** 接口对图片质量进行调节。
 
 >? 
 >- 图片处理功能为收费项，由数据万象收取，详细的计费说明请参见数据万象 [图片处理费用](https://cloud.tencent.com/document/product/460/58117)。
->- 该接口仅适用于 **jpg** 和 **webp** 格式的图片。
+>- 该接口支持 jpg、webp、tpg、heif、avif 格式图片。
+
+
 
 ## 接口示例
 
