--- a/api/存储与CDN/对象存储（XML API）/API 文档(6.28)/图片处理/裁剪.md
+++ b/api/存储与CDN/对象存储（XML API）/API 文档(6.28)/图片处理/裁剪.md
@@ -1,5 +1,5 @@
 ## 功能概述
-COS 通过数据万象接口 **imageMogr2** 提供裁剪功能，包括普通裁剪、缩放裁剪、内切圆裁剪、圆角裁剪和人脸智能裁剪。
+对象存储通过数据万象接口 **imageMogr2** 提供裁剪功能，包括普通裁剪、缩放裁剪、内切圆裁剪、圆角裁剪和人脸智能裁剪。
 
 该功能支持以下处理方式：
 
@@ -8,6 +8,13 @@ COS 通过数据万象接口 **imageMogr2** 提供裁剪功能，包括普通裁
 - 云上数据处理
 
 >! 图片处理功能为收费项，由数据万象收取，详细的计费说明请参见数据万象 [图片处理费用](https://cloud.tencent.com/document/product/460/58117)。
+
+## 限制说明
+
+- 支持格式：支持处理 JPG、BMP、GIF、PNG、WEBP 格式，并且支持 HEIF 格式的解码和处理操作。
+- 体积限制：处理图片原图大小不超过32MB、宽高不超过30000像素且总像素不超过2.5亿像素，处理结果图宽高设置不超过9999像素；针对动图，原图宽 x 高 x 帧数不超过2.5亿像素。
+- 动图帧数限制：gif 帧数限300帧。
+
 
 ## 接口示例
 
@@ -210,7 +217,7 @@ http://examples-1251000004.cos.ap-shanghai.myqcloud.com/sample.jpeg?imageMogr2/s
 
 #### 案例六：人脸智能裁剪并携带私有文件签名
 
-处理方式同上，仅增加签名部分，并与图片处理参数以“&"连接，示例如下：
+处理方式同上，仅增加签名部分，并与图片处理参数以“&”连接，示例如下：
 
 ```plaintext
 http://examples-1251000004.cos.ap-shanghai.myqcloud.com/sample.jpeg?q-sign-algorithm=<signature>&imageMogr2/scrop/100x600
