--- a/api/存储与CDN/对象存储（XML API）/API 文档(6.28)/图片处理/限制图片大小.md
+++ b/api/存储与CDN/对象存储（XML API）/API 文档(6.28)/图片处理/限制图片大小.md
@@ -1,6 +1,13 @@
 ## 功能概述
 
-COS 通过数据万象 **imageMogr2/size-limit** 接口可限制图片处理（例如缩放、压缩等）后的文件大小。
+对象存储通过数据万象 **imageMogr2/size-limit** 接口可限制图片处理（例如缩放、压缩等）后的文件大小。
+
+## 限制说明
+
+- 支持格式：支持处理 JPG、BMP、GIF、PNG、WEBP 格式，并且支持 HEIF 格式的解码和处理操作。
+- 体积限制：处理图片原图大小不超过32MB、宽高不超过30000像素且总像素不超过2.5亿像素，处理结果图宽高设置不超过9999像素；针对动图，原图宽 x 高 x 帧数不超过2.5亿像素。
+- 动图帧数限制：gif 帧数限300帧。
+
 
 ## 接口示例
 
