--- a/product/大数据与AI/万象优图2.0/API 文档/图片处理接口/裁剪.md
+++ b/product/大数据与AI/万象优图2.0/API 文档/图片处理接口/裁剪.md
@@ -6,6 +6,13 @@
 - 下载时处理
 - 上传时处理
 - 云上数据处理
+## 限制说明
+
+- 支持格式：支持处理 JPG、BMP、GIF、PNG、WEBP 格式，并且支持 HEIF 格式的解码和处理操作。
+- 体积限制：处理图片原图大小不超过32MB、宽高不超过30000像素且总像素不超过2.5亿像素，处理结果图宽高设置不超过9999像素；针对动图，原图宽 x 高 x 帧数不超过2.5亿像素。
+- 动图帧数限制：gif 帧数限300帧。
+
+
 
 ## 接口示例
 
@@ -208,7 +215,7 @@ http://examples-1251000004.cos.ap-shanghai.myqcloud.com/sample.jpeg?imageMogr2/s
 
 #### 案例六：人脸智能裁剪并携带私有文件签名
 
-处理方式同上，仅增加签名部分，并与图片处理参数以“&"连接，示例如下：
+处理方式同上，仅增加签名部分，并与图片处理参数以“&”连接，示例如下：
 
 ```plaintext
 http://examples-1251000004.cos.ap-shanghai.myqcloud.com/sample.jpeg?q-sign-algorithm=<signature>&imageMogr2/scrop/100x600
