--- a/product/计算与网络/无服务器云函数/操作指南/日志管理/日志检索教程新.md
+++ b/product/计算与网络/无服务器云函数/操作指南/日志管理/日志检索教程新.md
@@ -10,7 +10,7 @@
 - API 检索：您可通过调用日志服务 CLS [搜索日志](https://cloud.tencent.com/document/product/614/56447) 接口查询函数调用日志。
 
 > ! 
-> - SCF 写入 CLS 的日志结构请参考[日志结构说明](https://cloud.tencent.com/document/product/583/60336)。
+> - SCF 写入 CLS 的日志结构请参见 [日志结构说明](https://cloud.tencent.com/document/product/583/60336)。
 > - 若您的函数于2021年01月29日前创建且尚未进行迁移，如需使用更多日志分析功能，则请参见 [日志投递配置（旧）](https://cloud.tencent.com/document/product/583/39536)将函数调用日志投递到日志服务 CLS 使用。
 
 
@@ -35,16 +35,11 @@
 
 #### TopicId
 
-
-
-
-1. `TopicId` 为函数日志投递的 CLS 日志主题 ID，在需要查询日志的“函数配置”页面单击**日志主题**对应的链接。
+1. `TopicId` 为函数日志投递的 CLS 日志主题 ID，在需要查询日志的“函数配置”页面单击**日志主题**对应的链接。如下图所示：
 ![](https://main.qcloudimg.com/raw/b37eaf70a29ba652048fb84526f4d40d.png)
 2. 跳转到 CLS 控制台后，可以获取日志主题 ID。如下图所示：
 ![](https://main.qcloudimg.com/raw/06f58344a1b3e688d27fc5b6ef4bd664.png)
 >?您也可以通过调用 [获取函数详细信息](https://cloud.tencent.com/document/product/583/18584) API 取 `ClsTopicId` 获取 `Topicid`。
-
-
 
 
 #### Query
@@ -52,7 +47,6 @@
 > !
 > - 返回结果的各字段含义请参见 [日志结构说明](https://cloud.tencent.com/document/product/583/60336#.E9.BB.98.E8.AE.A4.E6.A0.BC.E5.BC.8F)。
 > - SCF 调用日志为实时上报，如果请求存在但返回值为空，可能为函数尚未执行完成，该条日志没有上报到 CLS 导致，请在函数执行完成后重试检索。
-
 
 
 #### 获取某函数全部调用日志
@@ -64,7 +58,6 @@ SCF_Namespace:"default" AND SCF_FunctionName:"hello-scf"
 ```
 
 
-
 #### 获取某个请求（RequestId）调用日志
 
 以请求为 `09c346d3-8417-49c5-8569-xxxxxxxxxxxx` 为例：
@@ -74,7 +67,6 @@ SCF_RequestId:"09c346d3-8417-49c5-8569-xxxxxxxxxxxx"
 ```
 
 
-
 #### 获取某个请求（RequestId）的执行结果
 
 执行结果包括请求开始时间、执行结果、执行耗时、内存消耗、日志等级，以请求为 `09c346d3-8417-49c5-8569-xxxxxxxxxxxx` 为例：
@@ -82,8 +74,6 @@ SCF_RequestId:"09c346d3-8417-49c5-8569-xxxxxxxxxxxx"
 ```SQL
 SCF_RequestId:"09c346d3-8417-49c5-8569-xxxxxxxxxxxx" AND SCF_Type:Platform AND SCF_Message:Report*
 ```
-
-
 
 #### 获取某个请求（RequestId）的返回值
 
@@ -98,7 +88,6 @@ SCF_RequestId:"09c346d3-8417-49c5-8569-xxxxxxxxxxxx" AND SCF_Type:Platform AND S
 > - SCF_Message 的值长度限制为 8KB，超出时将截取前 8KB。
 
 
-
 #### 获取一段时间内函数的请求列表
 
 以函数名称为 `hello-scf`，所在命名空间为 `default`，查询别名为 `$DEFAULT`，查询版本为1为例：
@@ -111,4 +100,3 @@ SCF_Type:Platform AND SCF_Message:Report* | select SCF_RequestId as requestId, S
 ```SQL
 SCF_Type:Platform AND SCF_Message:Report* | select SCF_RequestId as requestId, SCF_RetryNum as retryNum,SCF_StartTime as startTime where SCF_FunctionName='hello-scf' and SCF_Namespace='default' and SCF_Qualifier='1' and SCF_Alias:'$DEFAULT' and SCF_Duration>3000 order by startTime desc
 ```
-
