--- a/product/企业应用/腾讯电子签 SaaS 版/快速入门.md
+++ b/product/企业应用/腾讯电子签 SaaS 版/快速入门.md
@@ -11,8 +11,7 @@
 访问 [腾讯电子签控制台](https://ess.tencent.com/)，按照 [接入指引](https://cloud.tencent.com/document/product/1323/58492) 文档完成企业账号激活流程。
 
 ## 第 3 步：服务购买
-
-完成需求评审与商务洽谈后，根据您的情况选择适用的产品版本以及计费内容，在 [购买页](https://buy.cloud.tencent.com/ess) 进行对应计费内容的选购并支付订单。
+根据您的情况选择适用的产品版本以及计费内容，在 [购买页](https://buy.cloud.tencent.com/ess) 自助选购并支付订单。如您无法确定购买哪类套餐，可邮件至 e-contract@tencent.com 与我们联系，相关工作人员将协助您对业务场景进行评估，以确保您所购买的套餐满足自身需求。
 
 ## 第 4 步：使用服务
 
