--- a/product/教育/云课堂/接入指引.md
+++ b/product/教育/云课堂/接入指引.md
@@ -1,6 +1,6 @@
 ### 系统应用安装指导
 
-老师客户端支持 Windows 桌面端、Mac 桌面端、iPad 端、和 Android pad 端。
+老师客户端支持 Windows 客户端、Mac 客户端、iPad 客户端、Android 客户端。
 #### 下载地址
 - 方式一：腾讯 [云课堂官网下载](https://ykt.qq.com)，选择适配设备的版本下载。
 ![](https://main.qcloudimg.com/raw/c2ba88bb3b65bdc1fbd09fd75def1aa7.png)
@@ -9,7 +9,7 @@
 
 ### 老师端的使用
 
-- 老师上课端支持：Mac 桌面端、Windows 桌面端、iPad 端、Android pad 端。
+- 老师上课端支持：Mac 客户端、Windows 客户端、iOS 客户端、Android pad 客户端。
 - 老师管理端支持：web 管理后台，[管理台登录](https://xkt.campus.qq.com) 地址。
 - 可根据情况下载安装相应的客户端使用。下载安装方法如上。
 
