--- a/product/企业应用/腾讯电子签 SaaS 版/操作指南/模板管理.md
+++ b/product/企业应用/腾讯电子签 SaaS 版/操作指南/模板管理.md
@@ -20,7 +20,9 @@
 ![image-20210908112816646](https://main.qcloudimg.com/raw/b0ef416a25930f26f1d659e96d0de110.png)
 
 ### 步骤3：配置模板信息
-在**配置签约信息**页面中，填写模板名称. 模板说明，选择签署顺序。点击下方蓝色按钮添加签署人（如企业与个人签署，则添加一个企业签署方和一个个人签署方）。
+在**配置签约信息**页面中，填写模板名称. 模板说明，选择签署顺序。点击下方蓝色按钮添加签署人
+>?如企业与个人签署，则添加一个**企业签署方**和一个**个人签署方**。
+
 - 签约顺序：支持**无序签署**和**顺序签署**两种签署方式。无序签署不区分签署人的先后顺序，签署双方在合同发起后可同时进行签署。而顺序签署则按照下方签署人的添加顺序，依次进行签署，需前一位签署人完成签署后，后一位签署人才能进行签署。
 ![image-20210908113602885](https://main.qcloudimg.com/raw/f1975fcd6e2c62456889dcbf96359a68.png)
 
