--- a/product/计算与网络/轻量应用服务器/产品动态/新功能发布记录.md
+++ b/product/计算与网络/轻量应用服务器/产品动态/新功能发布记录.md
@@ -2,8 +2,8 @@
 <table>
     <tbody><tr><th style="width: 25%;">动态名称</th><th style="width: 60%;">动态描述</th><th style="width: 15%;">相关文档</th></tr>
 		<tr>
-                <td>轻量数据库服务全量开放</td>
-                <td>轻量数据库服务由公测转全量开放。
+                <td>轻量数据库服务正式上线</td>
+                <td>轻量数据库服务由公测转正式上线。
 							</td>
                 <td><a href="https://cloud.tencent.com/document/product/1207/59866" target="_blank">轻量数据库服务概述</a>
 		</td>
