--- a/product/存储与CDN/内容分发网络/配置手册/高级配置/带宽封顶配置.md
+++ b/product/存储与CDN/内容分发网络/配置手册/高级配置/带宽封顶配置.md
@@ -24,7 +24,9 @@
     注：对源站类型为 COS 源域名，仅支持访问返回404（即关闭CDN服务）
 - 告警阈值：当 访问带宽/访问阈值 的比值超出配置的百分比时（仅可填写10的倍数，10% - 90%），CDN将推送告警消息。默认未开启。
 
->! 检测到域名带宽超出阈值后，访问回源或访问返回404配置均需要全网节点逐步下发生效，因此会有一定的生效延迟。
+>! 
+>- 检测到域名带宽超出阈值后，访问回源或访问返回404配置均需要全网节点逐步下发生效，因此会有一定的生效延迟。
+>- 若已开启告警阈值：因扫描粒度为5min，若短时间内用量剧增或百分比设置的数值较大，可能上一次扫描还未触发百分比告警的阈值，下一次扫描直接达到了访问阈值。此场景下 CDN 会依次发送百分比告警和访问阈值告警两个通知消息。
 
 <img src="https://main.qcloudimg.com/raw/d0978322fe6d6c18d0bd9b1f496fcfbf.png" width=60%> </img>
 
