--- a/product/教育/云课堂/产品简介/产品优势.md
+++ b/product/教育/云课堂/产品简介/产品优势.md
@@ -3,7 +3,7 @@
 产品支持在线互动班课、公开课等多种在线场景。
 
 ### 音视频稳定流畅，提供高质量课堂体验
-腾讯云等前沿技术全面赋能，加固系统稳定性，加速音视频传输速度，实现高清直播流畅无卡顿、不崩不掉线。
+腾讯云等前沿技术全面赋能，加固系统稳定性，加快音视频传输速度，实现高清直播流畅无卡顿、不崩不掉线。
 
 ### 丰富的互动工具，打造趣味性教学场景
 提供功能场景丰富的互动工具：互动白板、激光笔、屏幕共享、录制回放、举手、计时器，提升课堂的趣味性，增强互动体验。
